feat: card text and links

--- a/docs/professor/alexandre_rodrigues_monge.mdx
+++ b/docs/professor/alexandre_rodrigues_monge.mdx
@@ -38,7 +38,7 @@ const data = {
           subject: "Projeto Integrador II - 1239",
           size: 2,
           teacher: "Alexandre Rodrigues Monge",
-          classroom: "Laboratório de Informatica B",
+          classroom: "Laboratório de Informatica A",
           students: "IIW2021",
           time: "13:10 - 14:00"
         },
