--- a/docs/professor/caroline_domingues_porto_do_nascimento_barbieri.mdx
+++ b/docs/professor/caroline_domingues_porto_do_nascimento_barbieri.mdx
@@ -1,40 +1,50 @@
 import { Grid } from "../../src/components/Grid";
 const data = {
-  title: "Rafael Luis Bartz",
+  title: "Caroline Domingues Porto do Nascimento Barbieri",
   weekClasses: [
     {
       title: "Segunda-Feira",
-      timetable: []
+      timetable: [
+        {
+          subject: "Fundamentos de informática - 1076",
+          size: 2,
+          teacher: "Caroline Domingues Porto do Nascimento Barbieri",
+          classroom: "Laboratório de Informatica A",
+          students: "IIW2022A",
+          time: "07:30 - 08:20"
+        }
+      ]
     },
     {
       title: "Terça-Feira",
-      timetable: []
+      timetable: [
+        {
+          subject: "Serviços em nuvem - 1250",
+          size: 2,
+          teacher: "Caroline Domingues Porto do Nascimento Barbieri",
+          classroom: "Laboratório de Informatica B",
+          students: "IIW2020",
+          time: "07:30 - 08:20"
+        }
+      ]
     },
     {
       title: "Quarta-Feira",
       timetable: [
         {
-          subject: "Engenharia de Interfaces e Usabilidade - 716",
+          subject: "Prototipação de Interfaces e Interação Humano-Computador - 1251",
           size: 2,
-          teacher: "Rafael Luis Bartz",
-          classroom: "BioPark-02",
-          students: "TDS2021-2B",
-          time: "19:00 - 19:50"
+          teacher: "Caroline Domingues Porto do Nascimento Barbieri",
+          classroom: "Laboratório de Computação Aplicada",
+          students: "IIW2020",
+          time: "07:30 - 08:20"
         },
         {
-          subject: "Linguagem de Programação - 718",
+          subject: "Informática Instrumental - 1532",
           size: 2,
-          teacher: "Rafael Luis Bartz",
-          classroom: "BioPark-02",
-          students: "TDS2021-2B",
-          time: "21:00 - 21:50"
-        },
-        {
-          subject: "Lógica de programação - 1075",
-          size: 2,
-          teacher: "Rafael Luis Bartz",
-          classroom: "BioPark-01",
-          students: "IIW2022B",
+          teacher: "Caroline Domingues Porto do Nascimento Barbieri",
+          classroom: "Laboratório de Informatica C",
+          students: "EIN2022",
           time: "10:15 - 11:05"
         }
       ]
@@ -43,20 +53,12 @@ const data = {
       title: "Quinta-Feira",
       timetable: [
         {
-          subject: "Linguagem de Programação - 718",
+          subject: "Projeto integrador I - 1078",
           size: 2,
-          teacher: "Rafael Luis Bartz",
-          classroom: "BioPark-02",
-          students: "TDS2021-2B",
-          time: "19:00 - 19:50"
-        },
-        {
-          subject: "Linguagem de Programação - 718",
-          size: 2,
-          teacher: "Rafael Luis Bartz",
-          classroom: "BioPark-02",
-          students: "TDS2021-2B",
-          time: "21:00 - 21:50"
+          teacher: "Caroline Domingues Porto do Nascimento Barbieri",
+          classroom: "BioPark-01",
+          students: "IIW2022B",
+          time: "10:15 - 11:05"
         }
       ]
     },
@@ -64,20 +66,12 @@ const data = {
       title: "Sexta-Feira",
       timetable: [
         {
-          subject: "Programação Orientada a Objetos - 719",
+          subject: "Tópicos Especiais em Tecnologia - 35",
           size: 2,
-          teacher: "Rafael Luis Bartz",
-          classroom: "BioPark-02",
-          students: "TDS2021-2B",
-          time: "19:00 - 19:50"
-        },
-        {
-          subject: "Programação Orientada a Objetos - 719",
-          size: 2,
-          teacher: "Rafael Luis Bartz",
-          classroom: "BioPark-02",
-          students: "TDS2021-2B",
-          time: "21:00 - 21:50"
+          teacher: "Caroline Domingues Porto do Nascimento Barbieri",
+          classroom: "Laboratório de Informatica B",
+          students: "IIN2019",
+          time: "09:25 - 10:15"
         }
       ]
     }
@@ -158,7 +152,7 @@ const data = {
   ]
 }
 
-# Rafael Luis Bartz
+# Caroline Domingues Porto do Nascimento Barbieri
 
 <div>
     {
