--- a/docs/professor/luiz_inacio_chaves.mdx
+++ b/docs/professor/luiz_inacio_chaves.mdx
@@ -29,17 +29,17 @@ const data = {
           subject: "Programação de Equipamentos Industriais - 348",
           size: 2,
           teacher: "Luiz Inácio Chaves",
-          classroom: "Sala 8-2",
+          classroom: "Laboratório de Informatica C",
           students: "ELM2021",
           time: "19:00 - 19:50"
         },
         {
-          subject: "Programação de Equipamentos Industriais - 348",
-          size: 2,
+          subject: "Cálculo Mecânico - 154",
+          size: 1,
           teacher: "Luiz Inácio Chaves",
-          classroom: "Sala 8-2",
-          students: "ELM2021",
-          time: "21:00 - 21:50"
+          classroom: "Sala 7-2",
+          students: "EIN2021",
+          time: "11:05 - 11:55"
         }
       ]
     },
@@ -47,20 +47,12 @@ const data = {
       title: "Quarta-Feira",
       timetable: [
         {
-          subject: "Elementos de Máquinas - 349",
-          size: 2,
-          teacher: "Luiz Inácio Chaves",
-          classroom: "Sala 8-2",
-          students: "ELM2021",
-          time: "19:00 - 19:50"
-        },
-        {
           subject: "Processos de Fabricação 3 - 1590",
           size: 2,
           teacher: "Luiz Inácio Chaves",
           classroom: "Laboratório de Usinagem B4",
           students: "EIN2019",
-          time: "10:15 - 11:05"
+          time: "09:25 - 10:15"
         },
         {
           subject: "Processos de Fabricação II - 344",
@@ -69,6 +61,22 @@ const data = {
           classroom: "Laboratório de Usinagem B4",
           students: "ELM2022",
           time: "21:00 - 21:50"
+        },
+        {
+          subject: "Programação de Equipamentos Industriais - 348",
+          size: 2,
+          teacher: "Luiz Inácio Chaves",
+          classroom: "Laboratório de Informatica C",
+          students: "ELM2021",
+          time: "19:00 - 19:50"
+        },
+        {
+          subject: "Cálculo Mecânico - 154",
+          size: 1,
+          teacher: "Luiz Inácio Chaves",
+          classroom: "Sala 7-2",
+          students: "EIN2021",
+          time: "08:20 - 09:10"
         }
       ]
     },
