--- a/docs/professor/marcos_antonio_guido.mdx
+++ b/docs/professor/marcos_antonio_guido.mdx
@@ -9,7 +9,7 @@ const data = {
           subject: "Programação para Sistemas Embarcados - 22",
           size: 2,
           teacher: "Marcos Antonio Guido",
-          classroom: "Laboratório de Informatica B",
+          classroom: "Laboratório de Informatica A",
           students: "TADS2020",
           time: "19:00 - 19:50"
         },
@@ -17,7 +17,7 @@ const data = {
           subject: "Segurança em Sistemas e Redes - 23",
           size: 1,
           teacher: "Marcos Antonio Guido",
-          classroom: "Laboratório de Informatica B",
+          classroom: "Laboratório de Informatica A",
           students: "TADS2020",
           time: "21:50 - 22:40"
         },
@@ -67,7 +67,7 @@ const data = {
           subject: "Tópicos Especiais em Tecnologia da Informação - 25",
           size: 2,
           teacher: "Marcos Antonio Guido",
-          classroom: "Laboratório de Informatica B",
+          classroom: "Laboratório de Informatica A",
           students: "TADS2020",
           time: "19:00 - 19:50"
         }
