--- a/docs/professor/mauro_cesar_de_souza_siena.mdx
+++ b/docs/professor/mauro_cesar_de_souza_siena.mdx
@@ -42,7 +42,7 @@ const data = {
           subject: "Estatística aplicada a estratégias empresariais - 1514",
           size: 2,
           teacher: "Mauro César de Souza Siena",
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Informatica B",
           students: "TGC2022",
           time: "19:00 - 19:50"
         },
