--- a/docs/professor/olavo_jose_luiz_junior.mdx
+++ b/docs/professor/olavo_jose_luiz_junior.mdx
@@ -31,14 +31,6 @@ const data = {
       title: "Quarta-Feira",
       timetable: [
         {
-          subject: "Projeto integrador I - 1078",
-          size: 2,
-          teacher: "Olavo José Luiz Junior",
-          classroom: "BioPark-01",
-          students: "IIW2022B",
-          time: "10:15 - 11:05"
-        },
-        {
           subject: "Lógica de Programação - 1483",
           size: 2,
           teacher: "Olavo José Luiz Junior+Eduardo Alberto Felippsen",
@@ -100,7 +92,7 @@ const data = {
           subject: "Projeto Integrador III - 1253",
           size: 2,
           teacher: "Olavo José Luiz Junior",
-          classroom: "Laboratório de Informatica B",
+          classroom: "Laboratório de Informatica A",
           students: "IIW2020",
           time: "07:30 - 08:20"
         }
