--- a/docs/professor/renata_carolina_pereira.mdx
+++ b/docs/professor/renata_carolina_pereira.mdx
@@ -1,88 +1,81 @@
 import { Grid } from "../../src/components/Grid";
 const data = {
-  title: "Milton Aparecido Azevedo",
+  title: "Renata Carolina Pereira",
   weekClasses: [
     {
       title: "Segunda-Feira",
       timetable: [
         {
-          subject: "História 1 - 131",
+          subject: "Arte I - 1235",
           size: 1,
-          teacher: "Milton Aparecido Azevedo",
-          classroom: "Sala 6-2",
-          students: "EIN2022",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "História 4 - 229",
-          size: 2,
-          teacher: "Milton Aparecido Azevedo",
-          classroom: "Sala 9-2",
-          students: "EIN2019",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "História I - 626",
-          size: 1,
-          teacher: "Milton Aparecido Azevedo",
-          classroom: "Sala 15-2",
-          students: "AGO2021",
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Sociologia da educação - 1303",
-          size: 2,
-          teacher: "Milton Aparecido Azevedo",
-          classroom: "Sala 11-2",
-          students: "BIO2020",
-          time: "21:00 - 21:50"
+          teacher: "Renata Carolina Pereira",
+          classroom: "Sala 12-2",
+          students: "IIW2021",
+          time: "13:10 - 14:00"
         }
       ]
     },
     {
       title: "Terça-Feira",
-      timetable: []
-    },
-    {
-      title: "Quarta-Feira",
-      timetable: []
-    },
-    {
-      title: "Quinta-Feira",
       timetable: [
         {
-          subject: "História 2 - 178",
+          subject: "Artes 1 - 121",
           size: 1,
-          teacher: "Milton Aparecido Azevedo",
-          classroom: "Sala 7-2",
-          students: "EIN2021",
-          time: "09:25 - 10:15"
+          teacher: "Renata Carolina Pereira",
+          classroom: "Sala 6-2",
+          students: "EIN2022",
+          time: "10:15 - 11:05"
         },
         {
-          subject: "História 3 - 207",
+          subject: "Artes 3 - 221",
           size: 1,
-          teacher: "Milton Aparecido Azevedo",
-          classroom: "Sala 8-2",
-          students: "EIN2020",
+          teacher: "Renata Carolina Pereira",
+          classroom: "Sala 9-2",
+          students: "EIN2019",
           time: "08:20 - 09:10"
         },
         {
-          subject: "História I - 626",
-          size: 1,
-          teacher: "Milton Aparecido Azevedo",
-          classroom: "Sala 15-2",
-          students: "AGO2021",
-          time: "07:30 - 08:20"
+          subject: "Artes I - 458",
+          size: 2,
+          teacher: "Renata Carolina Pereira",
+          classroom: "Sala 14-2",
+          students: "AGO2022",
+          time: "13:10 - 14:00"
         },
         {
-          subject: "História II - 1089",
+          subject: "Artes II - 614",
           size: 2,
-          teacher: "Milton Aparecido Azevedo",
-          classroom: "Sala 16-2",
-          students: "AGO2020",
-          time: "13:10 - 14:00"
+          teacher: "Renata Carolina Pereira",
+          classroom: "Sala 15-2",
+          students: "AGO2021",
+          time: "15:05 - 15:55"
         }
       ]
+    },
+    {
+      title: "Quarta-Feira",
+      timetable: [
+        {
+          subject: "Arte I - 1235",
+          size: 1,
+          teacher: "Renata Carolina Pereira",
+          classroom: "Sala 12-2",
+          students: "IIW2021",
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Artes 2 - 166",
+          size: 1,
+          teacher: "Renata Carolina Pereira",
+          classroom: "Sala 7-2",
+          students: "EIN2021",
+          time: "07:30 - 08:20"
+        }
+      ]
+    },
+    {
+      title: "Quinta-Feira",
+      timetable: []
     },
     {
       title: "Sexta-Feira",
@@ -165,7 +158,7 @@ const data = {
   ]
 }
 
-# Milton Aparecido Azevedo
+# Renata Carolina Pereira
 
 <div>
     {
