--- a/docs/professor/sergio_takahashi.mdx
+++ b/docs/professor/sergio_takahashi.mdx
@@ -4,7 +4,16 @@ const data = {
   weekClasses: [
     {
       title: "Segunda-Feira",
-      timetable: []
+      timetable: [
+        {
+          subject: "Tecnologia dos Materiais - 1531",
+          size: 2,
+          teacher: "Sérgio Takahashi",
+          classroom: "Sala 6-2",
+          students: "EIN2022",
+          time: "10:15 - 11:05"
+        }
+      ]
     },
     {
       title: "Terça-Feira",
@@ -24,14 +33,6 @@ const data = {
           classroom: "Laboratório de Informatica C",
           students: "EIN2022 - Grupo B",
           time: "09:25 - 10:15"
-        },
-        {
-          subject: "Metrologia - 1550",
-          size: 1,
-          teacher: "Sérgio Takahashi",
-          classroom: "Laboratório de Metrologia B4",
-          students: "EIN2021",
-          time: "11:05 - 11:55"
         }
       ]
     },
@@ -55,12 +56,12 @@ const data = {
           time: "09:25 - 10:15"
         },
         {
-          subject: "Tecnologia dos Materiais - 1531",
-          size: 2,
+          subject: "Metrologia - 1550",
+          size: 1,
           teacher: "Sérgio Takahashi",
-          classroom: "Sala 6-2",
-          students: "EIN2022",
-          time: "10:15 - 11:05"
+          classroom: "Laboratório de Metrologia B4",
+          students: "EIN2021",
+          time: "11:05 - 11:55"
         },
         {
           subject: "Tecnologia dos Materiais - 343",
@@ -90,6 +91,14 @@ const data = {
           classroom: "Sala 7-2",
           students: "ELM2022",
           time: "21:00 - 21:50"
+        },
+        {
+          subject: "Processos de Fabricação 1 - 1552",
+          size: 2,
+          teacher: "Sérgio Takahashi",
+          classroom: "Laboratório de Usinagem B4",
+          students: "EIN2021",
+          time: "10:15 - 11:05"
         }
       ]
     },
