--- a/docs/professor/vander_fabio_silveira.mdx
+++ b/docs/professor/vander_fabio_silveira.mdx
@@ -9,7 +9,7 @@ const data = {
           subject: "Elementos de Automação - 198",
           size: 2,
           teacher: "Vander Fabio Silveira",
-          classroom: "Laboratório de Máquinas e Acionamentos Elétricos B4",
+          classroom: "Laboratório de Informatica B",
           students: "EIN2020",
           time: "09:25 - 10:15"
         },
