--- a/docs/sala/laboratorio_de_informatica_b.mdx
+++ b/docs/sala/laboratorio_de_informatica_b.mdx
@@ -10,32 +10,24 @@ const data = {
           size: 2,
           teacher: "Douglas Barbosa Sousa",
           classroom: "Laboratório de Informatica B",
+          students: "AGO2022 - Grupo A",
+          time: "15:05 - 15:55"
+        },
+        {
+          subject: "Informática instrumental e aplicada - 468",
+          size: 2,
+          teacher: "Douglas Barbosa Sousa",
+          classroom: "Laboratório de Informatica B",
           students: "AGO2022 - Grupo B",
           time: "13:10 - 14:00"
         },
         {
-          subject: "Laboratório de Banco de Dados - 1238",
+          subject: "Elementos de Automação - 198",
           size: 2,
-          teacher: "Douglas Barbosa Sousa",
+          teacher: "Vander Fabio Silveira",
           classroom: "Laboratório de Informatica B",
-          students: "IIW2021",
+          students: "EIN2020",
           time: "09:25 - 10:15"
-        },
-        {
-          subject: "Programação para Sistemas Embarcados - 22",
-          size: 2,
-          teacher: "Marcos Antonio Guido",
-          classroom: "Laboratório de Informatica B",
-          students: "TADS2020",
-          time: "19:00 - 19:50"
-        },
-        {
-          subject: "Segurança em Sistemas e Redes - 23",
-          size: 1,
-          teacher: "Marcos Antonio Guido",
-          classroom: "Laboratório de Informatica B",
-          students: "TADS2020",
-          time: "21:50 - 22:40"
         },
         {
           subject: "Sistemas Digitais - 1553",
@@ -51,17 +43,17 @@ const data = {
       title: "Terça-Feira",
       timetable: [
         {
-          subject: "Projeto Integrador II - 1239",
+          subject: "Serviços em nuvem - 1250",
           size: 2,
-          teacher: "Alexandre Rodrigues Monge",
+          teacher: "Caroline Domingues Porto do Nascimento Barbieri",
           classroom: "Laboratório de Informatica B",
-          students: "IIW2021",
-          time: "13:10 - 14:00"
+          students: "IIW2020",
+          time: "07:30 - 08:20"
         },
         {
           subject: "Tópicos Especiais em Linguagem de Programação - 36",
           size: 2,
-          teacher: "Rafael Gil Ferques+Novo(a) professor(a) Informática",
+          teacher: "Rafael Gil Ferques",
           classroom: "Laboratório de Informatica B",
           students: "IIN2019",
           time: "09:25 - 10:15"
@@ -69,7 +61,7 @@ const data = {
         {
           subject: "Tópicos Especiais em Linguagem de Programação - 36",
           size: 1,
-          teacher: "Rafael Gil Ferques+Novo(a) professor(a) Informática",
+          teacher: "Rafael Gil Ferques",
           classroom: "Laboratório de Informatica B",
           students: "IIN2019",
           time: "11:05 - 11:55"
@@ -78,40 +70,15 @@ const data = {
     },
     {
       title: "Quarta-Feira",
-      timetable: [
-        {
-          subject: "Projeto e Análise de Sistemas - 182",
-          size: 2,
-          teacher: "Novo(a) professor(a) Informática+Rafael Gil Ferques",
-          classroom: "Laboratório de Informatica B",
-          students: "IIN2019",
-          time: "09:25 - 10:15"
-        }
-      ]
+      timetable: []
     },
     {
       title: "Quinta-Feira",
       timetable: [
         {
-          subject: "Programação Orientada a Objetos - 21",
+          subject: "Língua Portuguesa e Literatura III - 1240",
           size: 2,
-          teacher: "Humberto Fioravante Ferro",
-          classroom: "Laboratório de Informatica B",
-          students: "TADS2020",
-          time: "19:00 - 19:50"
-        },
-        {
-          subject: "Programação Orientada a Objetos - 21",
-          size: 2,
-          teacher: "Humberto Fioravante Ferro",
-          classroom: "Laboratório de Informatica B",
-          students: "TADS2020",
-          time: "21:00 - 21:50"
-        },
-        {
-          subject: "Serviços em nuvem - 1250",
-          size: 2,
-          teacher: "Joaquim José Honório de Lima",
+          teacher: "Michelli Cristina Galli",
           classroom: "Laboratório de Informatica B",
           students: "IIW2020",
           time: "09:25 - 10:15"
@@ -122,19 +89,27 @@ const data = {
       title: "Sexta-Feira",
       timetable: [
         {
+          subject: "Projeto Final de Curso - 181",
+          size: 2,
+          teacher: "Douglas Barbosa Sousa",
+          classroom: "Laboratório de Informatica B",
+          students: "IIN2019",
+          time: "07:30 - 08:20"
+        },
+        {
           subject: "Tópicos Especiais em Tecnologia - 35",
           size: 2,
-          teacher: "Luis Henrique Manosso Von Mecheln+Novo(a) professor(a) Informática",
+          teacher: "Caroline Domingues Porto do Nascimento Barbieri",
           classroom: "Laboratório de Informatica B",
           students: "IIN2019",
           time: "09:25 - 10:15"
         },
         {
-          subject: "Tópicos Especiais em Tecnologia da Informação - 25",
+          subject: "Estatística aplicada a estratégias empresariais - 1514",
           size: 2,
-          teacher: "Marcos Antonio Guido",
+          teacher: "Mauro César de Souza Siena",
           classroom: "Laboratório de Informatica B",
-          students: "TADS2020",
+          students: "TGC2022",
           time: "19:00 - 19:50"
         },
         {
@@ -144,14 +119,6 @@ const data = {
           classroom: "Laboratório de Informatica B",
           students: "TGC2022",
           time: "21:00 - 21:50"
-        },
-        {
-          subject: "Projeto Integrador III - 1253",
-          size: 2,
-          teacher: "Olavo José Luiz Junior",
-          classroom: "Laboratório de Informatica B",
-          students: "IIW2020",
-          time: "07:30 - 08:20"
         }
       ]
     }
