--- a/docs/sala/laboratorio_de_informatica_c.mdx
+++ b/docs/sala/laboratorio_de_informatica_c.mdx
@@ -28,20 +28,20 @@ const data = {
           classroom: "Laboratório de Informatica C",
           students: "AGO2020",
           time: "09:25 - 10:15"
-        },
-        {
-          subject: "Informática Instrumental - 1532",
-          size: 2,
-          teacher: "Vânio Berlin de Souza+Humberto Fioravante Ferro",
-          classroom: "Laboratório de Informatica C",
-          students: "EIN2022",
-          time: "10:15 - 11:05"
         }
       ]
     },
     {
       title: "Terça-Feira",
       timetable: [
+        {
+          subject: "Programação de Equipamentos Industriais - 348",
+          size: 2,
+          teacher: "Luiz Inácio Chaves",
+          classroom: "Laboratório de Informatica C",
+          students: "ELM2021",
+          time: "19:00 - 19:50"
+        },
         {
           subject: "Desenho Técnico - 1529",
           size: 2,
@@ -64,6 +64,14 @@ const data = {
       title: "Quarta-Feira",
       timetable: [
         {
+          subject: "Programação de Equipamentos Industriais - 348",
+          size: 2,
+          teacher: "Luiz Inácio Chaves",
+          classroom: "Laboratório de Informatica C",
+          students: "ELM2021",
+          time: "19:00 - 19:50"
+        },
+        {
           subject: "Desenho Técnico - 1529",
           size: 2,
           teacher: "Sérgio Takahashi",
@@ -78,6 +86,14 @@ const data = {
           classroom: "Laboratório de Informatica C",
           students: "EIN2022 - Grupo A",
           time: "09:25 - 10:15"
+        },
+        {
+          subject: "Informática Instrumental - 1532",
+          size: 2,
+          teacher: "Caroline Domingues Porto do Nascimento Barbieri",
+          classroom: "Laboratório de Informatica C",
+          students: "EIN2022",
+          time: "10:15 - 11:05"
         }
       ]
     },
