--- a/docs/sala/laboratorio_de_usinagem_b4.mdx
+++ b/docs/sala/laboratorio_de_usinagem_b4.mdx
@@ -28,7 +28,7 @@ const data = {
           teacher: "Luiz Inácio Chaves",
           classroom: "Laboratório de Usinagem B4",
           students: "EIN2019",
-          time: "10:15 - 11:05"
+          time: "09:25 - 10:15"
         },
         {
           subject: "Processos de Fabricação II - 344",
@@ -46,7 +46,7 @@ const data = {
         {
           subject: "Processos de Fabricação 1 - 1552",
           size: 2,
-          teacher: "Vânio Berlin de Souza",
+          teacher: "Sérgio Takahashi",
           classroom: "Laboratório de Usinagem B4",
           students: "EIN2021",
           time: "10:15 - 11:05"
