--- a/docs/sala/sala_12-2.mdx
+++ b/docs/sala/sala_12-2.mdx
@@ -16,7 +16,7 @@ const data = {
         {
           subject: "Arte I - 1235",
           size: 1,
-          teacher: "Josiane Paula Maltauro",
+          teacher: "Renata Carolina Pereira",
           classroom: "Sala 12-2",
           students: "IIW2021",
           time: "13:10 - 14:00"
@@ -48,7 +48,7 @@ const data = {
           teacher: "Michelli Cristina Galli",
           classroom: "Sala 12-2",
           students: "IIW2021",
-          time: "09:25 - 10:15"
+          time: "11:05 - 11:55"
         },
         {
           subject: "Língua Portuguesa e Literatura II - 1226",
@@ -56,7 +56,7 @@ const data = {
           teacher: "Michelli Cristina Galli",
           classroom: "Sala 12-2",
           students: "IIW2021",
-          time: "10:15 - 11:05"
+          time: "07:30 - 08:20"
         },
         {
           subject: "Fisiologia animal comparada - 506",
@@ -76,19 +76,11 @@ const data = {
         },
         {
           subject: "Matemática II - 1231",
-          size: 1,
+          size: 2,
           teacher: "Sérgio Augusto Dias Castro",
           classroom: "Sala 12-2",
           students: "IIW2021",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Matemática II - 1231",
-          size: 1,
-          teacher: "Sérgio Augusto Dias Castro",
-          classroom: "Sala 12-2",
-          students: "IIW2021",
-          time: "08:20 - 09:10"
+          time: "09:25 - 10:15"
         }
       ]
     },
@@ -102,6 +94,14 @@ const data = {
           classroom: "Sala 12-2",
           students: "BIO2019",
           time: "19:00 - 19:50"
+        },
+        {
+          subject: "Biologia II - 1228",
+          size: 2,
+          teacher: "Gabriele Antico Freiria",
+          classroom: "Sala 12-2",
+          students: "IIW2021",
+          time: "10:15 - 11:05"
         },
         {
           subject: "Genética de populações e evolução - 505",
@@ -122,7 +122,7 @@ const data = {
         {
           subject: "Arte I - 1235",
           size: 1,
-          teacher: "Josiane Paula Maltauro",
+          teacher: "Renata Carolina Pereira",
           classroom: "Sala 12-2",
           students: "IIW2021",
           time: "09:25 - 10:15"
@@ -192,14 +192,6 @@ const data = {
           classroom: "Sala 12-2",
           students: "IIW2021",
           time: "09:25 - 10:15"
-        },
-        {
-          subject: "Biologia II - 1228",
-          size: 2,
-          teacher: "Gabriele Antico Freiria",
-          classroom: "Sala 12-2",
-          students: "IIW2021",
-          time: "07:30 - 08:20"
         },
         {
           subject: "Genética de populações e evolução - 505",
