--- a/docs/sala/sala_13-2.mdx
+++ b/docs/sala/sala_13-2.mdx
@@ -53,7 +53,7 @@ const data = {
         {
           subject: "Filosofia III - 1245",
           size: 1,
-          teacher: "Fabio Antônio da Silva",
+          teacher: "José Jurandir Pereira Junior",
           classroom: "Sala 13-2",
           students: "IIW2020",
           time: "11:05 - 11:55"
@@ -67,17 +67,9 @@ const data = {
           time: "21:00 - 21:50"
         },
         {
-          subject: "Língua Portuguesa e Literatura III - 1240",
-          size: 2,
-          teacher: "Michelli Cristina Galli",
-          classroom: "Sala 13-2",
-          students: "IIW2020",
-          time: "07:30 - 08:20"
-        },
-        {
           subject: "Projeto Integrador - 2211",
           size: 2,
-          teacher: "Tiago Amaral Silva",
+          teacher: "Tiago Amaral Silva+Josiane Paula Maltauro",
           classroom: "Sala 13-2",
           students: "AGR2021",
           time: "19:00 - 19:50"
@@ -151,7 +143,7 @@ const data = {
         {
           subject: "Filosofia III - 1245",
           size: 1,
-          teacher: "Fabio Antônio da Silva",
+          teacher: "José Jurandir Pereira Junior",
           classroom: "Sala 13-2",
           students: "IIW2020",
           time: "07:30 - 08:20"
