--- a/docs/sala/sala_14-2.mdx
+++ b/docs/sala/sala_14-2.mdx
@@ -6,6 +6,14 @@ const data = {
       title: "Segunda-Feira",
       timetable: [
         {
+          subject: "Geografia I - 463",
+          size: 2,
+          teacher: "Jhones Donizetti Mendes",
+          classroom: "Sala 14-2",
+          students: "AGO2022",
+          time: "09:25 - 10:15"
+        },
+        {
           subject: "Piscicultura e Apicultura - 1471",
           size: 2,
           teacher: "Roberto Haruyoshi Ito",
@@ -22,20 +30,12 @@ const data = {
           time: "07:30 - 08:20"
         },
         {
-          subject: "Agroecologia e DRS - 470",
-          size: 2,
-          teacher: "Tatiane Martinazzo Portz",
-          classroom: "Sala 14-2",
-          students: "AGO2022",
-          time: "10:15 - 11:05"
-        },
-        {
           subject: "Educação postural e Segurança no trabalho - 471",
           size: 1,
           teacher: "Tatiane Martinazzo Portz",
           classroom: "Sala 14-2",
           students: "AGO2022",
-          time: "09:25 - 10:15"
+          time: "11:05 - 11:55"
         },
         {
           subject: "Fertilidade, Manejo e Conservação dos Solos - 1473",
@@ -51,17 +51,9 @@ const data = {
       title: "Terça-Feira",
       timetable: [
         {
-          subject: "Geografia I - 463",
-          size: 2,
-          teacher: "Jhones Donizetti Mendes",
-          classroom: "Sala 14-2",
-          students: "AGO2022",
-          time: "07:30 - 08:20"
-        },
-        {
           subject: "Artes I - 458",
           size: 2,
-          teacher: "Josiane Paula Maltauro",
+          teacher: "Renata Carolina Pereira",
           classroom: "Sala 14-2",
           students: "AGO2022",
           time: "13:10 - 14:00"
@@ -72,7 +64,7 @@ const data = {
           teacher: "Pedro Leites Junior",
           classroom: "Sala 14-2",
           students: "AGO2022",
-          time: "09:25 - 10:15"
+          time: "07:30 - 08:20"
         },
         {
           subject: "Língua Portuguesa e Literatura I - 455",
@@ -80,7 +72,7 @@ const data = {
           teacher: "Pedro Leites Junior",
           classroom: "Sala 14-2",
           students: "AGO2022",
-          time: "11:05 - 11:55"
+          time: "09:25 - 10:15"
         },
         {
           subject: "Piscicultura e Apicultura - 1471",
@@ -97,6 +89,14 @@ const data = {
           classroom: "Sala 14-2",
           students: "AGR2022",
           time: "21:00 - 21:50"
+        },
+        {
+          subject: "Agroecologia e DRS - 470",
+          size: 2,
+          teacher: "Tatiane Martinazzo Portz",
+          classroom: "Sala 14-2",
+          students: "AGO2022",
+          time: "10:15 - 11:05"
         }
       ]
     },
