--- a/docs/sala/sala_16-2.mdx
+++ b/docs/sala/sala_16-2.mdx
@@ -19,9 +19,9 @@ const data = {
       title: "Terça-Feira",
       timetable: [
         {
-          subject: "Sociologia e extensão rural - 1087",
+          subject: "Filosofia III - 1088",
           size: 1,
-          teacher: "Elias Franco",
+          teacher: "José Jurandir Pereira Junior",
           classroom: "Sala 16-2",
           students: "AGO2020",
           time: "09:25 - 10:15"
@@ -29,7 +29,7 @@ const data = {
         {
           subject: "Filosofia III - 1088",
           size: 1,
-          teacher: "Fabio Antônio da Silva",
+          teacher: "José Jurandir Pereira Junior",
           classroom: "Sala 16-2",
           students: "AGO2020",
           time: "10:15 - 11:05"
@@ -85,9 +85,9 @@ const data = {
       title: "Quinta-Feira",
       timetable: [
         {
-          subject: "Filosofia III - 1088",
+          subject: "Sociologia e extensão rural - 1087",
           size: 1,
-          teacher: "Fabio Antônio da Silva",
+          teacher: "Elias Franco",
           classroom: "Sala 16-2",
           students: "AGO2020",
           time: "15:05 - 15:55"
