--- a/docs/sala/sala_6-2.mdx
+++ b/docs/sala/sala_6-2.mdx
@@ -28,6 +28,14 @@ const data = {
           classroom: "Sala 6-2",
           students: "EIN2022",
           time: "09:25 - 10:15"
+        },
+        {
+          subject: "Tecnologia dos Materiais - 1531",
+          size: 2,
+          teacher: "Sérgio Takahashi",
+          classroom: "Sala 6-2",
+          students: "EIN2022",
+          time: "10:15 - 11:05"
         }
       ]
     },
@@ -37,7 +45,7 @@ const data = {
         {
           subject: "Artes 1 - 121",
           size: 1,
-          teacher: "Josiane Paula Maltauro",
+          teacher: "Renata Carolina Pereira",
           classroom: "Sala 6-2",
           students: "EIN2022",
           time: "10:15 - 11:05"
@@ -62,16 +70,7 @@ const data = {
     },
     {
       title: "Quarta-Feira",
-      timetable: [
-        {
-          subject: "Tecnologia dos Materiais - 1531",
-          size: 2,
-          teacher: "Sérgio Takahashi",
-          classroom: "Sala 6-2",
-          students: "EIN2022",
-          time: "10:15 - 11:05"
-        }
-      ]
+      timetable: []
     },
     {
       title: "Quinta-Feira",
