--- a/docs/sala/sala_7-2.mdx
+++ b/docs/sala/sala_7-2.mdx
@@ -16,20 +16,20 @@ const data = {
           classroom: "Sala 7-2",
           students: "EIN2021",
           time: "09:25 - 10:15"
+        },
+        {
+          subject: "Cálculo Mecânico - 154",
+          size: 1,
+          teacher: "Luiz Inácio Chaves",
+          classroom: "Sala 7-2",
+          students: "EIN2021",
+          time: "11:05 - 11:55"
         }
       ]
     },
     {
       title: "Quarta-Feira",
       timetable: [
-        {
-          subject: "Sociologia 2 - 189",
-          size: 1,
-          teacher: "Everaldo Lorensetti",
-          classroom: "Sala 7-2",
-          students: "EIN2021",
-          time: "07:30 - 08:20"
-        },
         {
           subject: "Geografia 2 - 177",
           size: 1,
@@ -41,18 +41,10 @@ const data = {
         {
           subject: "Artes 2 - 166",
           size: 1,
-          teacher: "Josiane Paula Maltauro",
+          teacher: "Renata Carolina Pereira",
           classroom: "Sala 7-2",
           students: "EIN2021",
-          time: "08:20 - 09:10"
-        },
-        {
-          subject: "Lingua Estrangeira Moderna 1 - Inglês - 179",
-          size: 1,
-          teacher: "Kátia Cristiane Kobus Novaes",
-          classroom: "Sala 7-2",
-          students: "EIN2021",
-          time: "11:05 - 11:55"
+          time: "07:30 - 08:20"
         },
         {
           subject: "Tecnologia dos Materiais - 343",
@@ -61,6 +53,14 @@ const data = {
           classroom: "Sala 7-2",
           students: "ELM2022",
           time: "19:00 - 19:50"
+        },
+        {
+          subject: "Cálculo Mecânico - 154",
+          size: 1,
+          teacher: "Luiz Inácio Chaves",
+          classroom: "Sala 7-2",
+          students: "EIN2021",
+          time: "08:20 - 09:10"
         }
       ]
     },
@@ -73,7 +73,7 @@ const data = {
           teacher: "Fabio Antônio da Silva",
           classroom: "Sala 7-2",
           students: "EIN2021",
-          time: "09:25 - 10:15"
+          time: "08:20 - 09:10"
         },
         {
           subject: "História 2 - 178",
@@ -81,7 +81,7 @@ const data = {
           teacher: "Milton Aparecido Azevedo",
           classroom: "Sala 7-2",
           students: "EIN2021",
-          time: "08:20 - 09:10"
+          time: "09:25 - 10:15"
         },
         {
           subject: "Tecnologia dos Materiais - 343",
@@ -97,12 +97,20 @@ const data = {
       title: "Sexta-Feira",
       timetable: [
         {
-          subject: "Cálculo Mecânico - 154",
-          size: 2,
-          teacher: "Vânio Berlin de Souza",
+          subject: "Sociologia 2 - 189",
+          size: 1,
+          teacher: "Everaldo Lorensetti",
           classroom: "Sala 7-2",
           students: "EIN2021",
           time: "10:15 - 11:05"
+        },
+        {
+          subject: "Lingua Estrangeira Moderna 1 - Inglês - 179",
+          size: 1,
+          teacher: "Kátia Cristiane Kobus Novaes",
+          classroom: "Sala 7-2",
+          students: "EIN2021",
+          time: "11:05 - 11:55"
         }
       ]
     }
