--- a/docs/sala/sala_8-2.mdx
+++ b/docs/sala/sala_8-2.mdx
@@ -43,17 +43,9 @@ const data = {
           time: "09:25 - 10:15"
         },
         {
-          subject: "Programação de Equipamentos Industriais - 348",
+          subject: "Elementos de Máquinas - 349",
           size: 2,
-          teacher: "Luiz Inácio Chaves",
-          classroom: "Sala 8-2",
-          students: "ELM2021",
-          time: "19:00 - 19:50"
-        },
-        {
-          subject: "Programação de Equipamentos Industriais - 348",
-          size: 2,
-          teacher: "Luiz Inácio Chaves",
+          teacher: "Vânio Berlin de Souza",
           classroom: "Sala 8-2",
           students: "ELM2021",
           time: "21:00 - 21:50"
@@ -66,7 +58,7 @@ const data = {
         {
           subject: "Filosofia 3 - 204",
           size: 1,
-          teacher: "Fabio Antônio da Silva",
+          teacher: "José Jurandir Pereira Junior",
           classroom: "Sala 8-2",
           students: "EIN2020",
           time: "07:30 - 08:20"
@@ -94,14 +86,6 @@ const data = {
           classroom: "Sala 8-2",
           students: "EIN2020",
           time: "09:25 - 10:15"
-        },
-        {
-          subject: "Elementos de Máquinas - 349",
-          size: 2,
-          teacher: "Luiz Inácio Chaves",
-          classroom: "Sala 8-2",
-          students: "ELM2021",
-          time: "19:00 - 19:50"
         },
         {
           subject: "Circuitos Hidráulicos e Pneumáticos - 347",
@@ -138,7 +122,7 @@ const data = {
           teacher: "Milton Aparecido Azevedo",
           classroom: "Sala 8-2",
           students: "EIN2020",
-          time: "11:05 - 11:55"
+          time: "08:20 - 09:10"
         },
         {
           subject: "Manutenção Industrial - 351",
