--- a/docs/turma/ago2020.mdx
+++ b/docs/turma/ago2020.mdx
@@ -35,9 +35,9 @@ const data = {
       title: "Terça-Feira",
       timetable: [
         {
-          subject: "Sociologia e extensão rural - 1087",
+          subject: "Filosofia III - 1088",
           size: 1,
-          teacher: "Elias Franco",
+          teacher: "José Jurandir Pereira Junior",
           classroom: "Sala 16-2",
           students: "AGO2020",
           time: "09:25 - 10:15"
@@ -45,7 +45,7 @@ const data = {
         {
           subject: "Filosofia III - 1088",
           size: 1,
-          teacher: "Fabio Antônio da Silva",
+          teacher: "José Jurandir Pereira Junior",
           classroom: "Sala 16-2",
           students: "AGO2020",
           time: "10:15 - 11:05"
@@ -75,10 +75,10 @@ const data = {
           time: "13:10 - 14:00"
         },
         {
-          subject: "Física III - 1084",
+          subject: "Educação Física III - 1082",
           size: 2,
-          teacher: "Polyanna Guimarães e Miranda",
-          classroom: "Laboratório de Física",
+          teacher: "Tiago Amaral Silva",
+          classroom: "Educação Física / Sala 4 B2",
           students: "AGO2020",
           time: "07:30 - 08:20"
         }
@@ -104,10 +104,10 @@ const data = {
           time: "09:25 - 10:15"
         },
         {
-          subject: "Educação Física III - 1082",
+          subject: "Física III - 1084",
           size: 2,
-          teacher: "Tiago Amaral Silva",
-          classroom: "Educação Física / Sala 4 B2",
+          teacher: "Polyanna Guimarães e Miranda",
+          classroom: "Laboratório de Física",
           students: "AGO2020",
           time: "10:15 - 11:05"
         }
@@ -117,9 +117,9 @@ const data = {
       title: "Quinta-Feira",
       timetable: [
         {
-          subject: "Filosofia III - 1088",
+          subject: "Sociologia e extensão rural - 1087",
           size: 1,
-          teacher: "Fabio Antônio da Silva",
+          teacher: "Elias Franco",
           classroom: "Sala 16-2",
           students: "AGO2020",
           time: "15:05 - 15:55"
