--- a/docs/turma/ago2021.mdx
+++ b/docs/turma/ago2021.mdx
@@ -14,14 +14,6 @@ const data = {
           time: "15:05 - 15:55"
         },
         {
-          subject: "Geografia II - 623",
-          size: 2,
-          teacher: "Jhones Donizetti Mendes",
-          classroom: "Sala 15-2",
-          students: "AGO2021",
-          time: "09:25 - 10:15"
-        },
-        {
           subject: "Cultura e Cinema Nacional II - 1192",
           size: 1,
           teacher: "Josiane Paula Maltauro",
@@ -52,6 +44,14 @@ const data = {
           classroom: "Sala 15-2",
           students: "AGO2021",
           time: "07:30 - 08:20"
+        },
+        {
+          subject: "Sociologia Rural - 625",
+          size: 2,
+          teacher: "Tatiane Martinazzo Portz",
+          classroom: "Sala 15-2",
+          students: "AGO2021",
+          time: "09:25 - 10:15"
         }
       ]
     },
@@ -59,12 +59,28 @@ const data = {
       title: "Terça-Feira",
       timetable: [
         {
+          subject: "Geografia II - 623",
+          size: 2,
+          teacher: "Jhones Donizetti Mendes",
+          classroom: "Sala 15-2",
+          students: "AGO2021",
+          time: "07:30 - 08:20"
+        },
+        {
           subject: "Artes II - 614",
           size: 2,
-          teacher: "Josiane Paula Maltauro",
+          teacher: "Renata Carolina Pereira",
           classroom: "Sala 15-2",
           students: "AGO2021",
           time: "15:05 - 15:55"
+        },
+        {
+          subject: "Língua Portuguesa e Literatura II - 613",
+          size: 2,
+          teacher: "Michelli Cristina Galli",
+          classroom: "Sala 15-2",
+          students: "AGO2021",
+          time: "09:25 - 10:15"
         },
         {
           subject: "Física II - 617",
@@ -81,22 +97,6 @@ const data = {
           classroom: "Sala 15-2",
           students: "AGO2021",
           time: "11:05 - 11:55"
-        },
-        {
-          subject: "Sociologia Rural - 625",
-          size: 2,
-          teacher: "Tatiane Martinazzo Portz",
-          classroom: "Sala 15-2",
-          students: "AGO2021",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Educação Física II - 615",
-          size: 2,
-          teacher: "Tiago Amaral Silva",
-          classroom: "Educação Física / Sala 4 B2",
-          students: "AGO2021",
-          time: "07:30 - 08:20"
         }
       ]
     },
@@ -104,34 +104,34 @@ const data = {
       title: "Quarta-Feira",
       timetable: [
         {
-          subject: "Construções e Instalações Rurais - 630",
-          size: 2,
-          teacher: "Elias Franco",
-          classroom: "Sala 15-2",
-          students: "AGO2021",
-          time: "09:25 - 10:15"
-        },
-        {
           subject: "Sistemas Agroflorestais - 629",
           size: 2,
           teacher: "Elias Franco",
           classroom: "Sala 15-2",
           students: "AGO2021",
           time: "07:30 - 08:20"
-        }
-      ]
-    },
-    {
-      title: "Quinta-Feira",
-      timetable: [
+        },
         {
           subject: "Filosofia II - 624",
           size: 1,
           teacher: "Fabio Antônio da Silva",
           classroom: "Sala 15-2",
           students: "AGO2021",
-          time: "15:55 - 16:45"
+          time: "11:05 - 11:55"
         },
+        {
+          subject: "Educação Física II - 615",
+          size: 2,
+          teacher: "Tiago Amaral Silva",
+          classroom: "Educação Física / Sala 4 B2",
+          students: "AGO2021",
+          time: "09:25 - 10:15"
+        }
+      ]
+    },
+    {
+      title: "Quinta-Feira",
+      timetable: [
         {
           subject: "Química II - 618",
           size: 1,
@@ -194,12 +194,12 @@ const data = {
           time: "07:30 - 08:20"
         },
         {
-          subject: "Língua Portuguesa e Literatura II - 613",
+          subject: "Construções e Instalações Rurais - 630",
           size: 2,
-          teacher: "Michelli Cristina Galli",
+          teacher: "Elias Franco",
           classroom: "Sala 15-2",
           students: "AGO2021",
-          time: "09:25 - 10:15"
+          time: "10:15 - 11:05"
         },
         {
           subject: "Língua Portuguesa e Literatura II - 613",
@@ -207,7 +207,7 @@ const data = {
           teacher: "Michelli Cristina Galli",
           classroom: "Sala 15-2",
           students: "AGO2021",
-          time: "11:05 - 11:55"
+          time: "09:25 - 10:15"
         }
       ]
     }
