--- a/docs/turma/ago2022.mdx
+++ b/docs/turma/ago2022.mdx
@@ -9,7 +9,7 @@ const data = {
           subject: "Informática instrumental e aplicada - 468",
           size: 2,
           teacher: "Douglas Barbosa Sousa",
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Informatica B",
           students: "AGO2022 - Grupo A",
           time: "15:05 - 15:55"
         },
@@ -20,6 +20,14 @@ const data = {
           classroom: "Laboratório de Informatica B",
           students: "AGO2022 - Grupo B",
           time: "13:10 - 14:00"
+        },
+        {
+          subject: "Geografia I - 463",
+          size: 2,
+          teacher: "Jhones Donizetti Mendes",
+          classroom: "Sala 14-2",
+          students: "AGO2022",
+          time: "09:25 - 10:15"
         },
         {
           subject: "Desenho técnico e topografia - 469",
@@ -46,20 +54,12 @@ const data = {
           time: "07:30 - 08:20"
         },
         {
-          subject: "Agroecologia e DRS - 470",
-          size: 2,
-          teacher: "Tatiane Martinazzo Portz",
-          classroom: "Sala 14-2",
-          students: "AGO2022",
-          time: "10:15 - 11:05"
-        },
-        {
           subject: "Educação postural e Segurança no trabalho - 471",
           size: 1,
           teacher: "Tatiane Martinazzo Portz",
           classroom: "Sala 14-2",
           students: "AGO2022",
-          time: "09:25 - 10:15"
+          time: "11:05 - 11:55"
         }
       ]
     },
@@ -67,17 +67,9 @@ const data = {
       title: "Terça-Feira",
       timetable: [
         {
-          subject: "Geografia I - 463",
-          size: 2,
-          teacher: "Jhones Donizetti Mendes",
-          classroom: "Sala 14-2",
-          students: "AGO2022",
-          time: "07:30 - 08:20"
-        },
-        {
           subject: "Artes I - 458",
           size: 2,
-          teacher: "Josiane Paula Maltauro",
+          teacher: "Renata Carolina Pereira",
           classroom: "Sala 14-2",
           students: "AGO2022",
           time: "13:10 - 14:00"
@@ -96,7 +88,7 @@ const data = {
           teacher: "Pedro Leites Junior",
           classroom: "Sala 14-2",
           students: "AGO2022",
-          time: "09:25 - 10:15"
+          time: "07:30 - 08:20"
         },
         {
           subject: "Língua Portuguesa e Literatura I - 455",
@@ -104,7 +96,15 @@ const data = {
           teacher: "Pedro Leites Junior",
           classroom: "Sala 14-2",
           students: "AGO2022",
-          time: "11:05 - 11:55"
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Agroecologia e DRS - 470",
+          size: 2,
+          teacher: "Tatiane Martinazzo Portz",
+          classroom: "Sala 14-2",
+          students: "AGO2022",
+          time: "10:15 - 11:05"
         }
       ]
     },
