--- a/docs/turma/agr2021.mdx
+++ b/docs/turma/agr2021.mdx
@@ -37,7 +37,7 @@ const data = {
         {
           subject: "Projeto Integrador - 2211",
           size: 2,
-          teacher: "Tiago Amaral Silva",
+          teacher: "Tiago Amaral Silva+Josiane Paula Maltauro",
           classroom: "Sala 13-2",
           students: "AGR2021",
           time: "19:00 - 19:50"
