--- a/docs/turma/ein2019.mdx
+++ b/docs/turma/ein2019.mdx
@@ -37,7 +37,7 @@ const data = {
         {
           subject: "Filosofia 4 - 223",
           size: 1,
-          teacher: "Fabio Antônio da Silva",
+          teacher: "José Jurandir Pereira Junior",
           classroom: "Sala 9-2",
           students: "EIN2019",
           time: "07:30 - 08:20"
@@ -45,7 +45,7 @@ const data = {
         {
           subject: "Artes 3 - 221",
           size: 1,
-          teacher: "Josiane Paula Maltauro",
+          teacher: "Renata Carolina Pereira",
           classroom: "Sala 9-2",
           students: "EIN2019",
           time: "08:20 - 09:10"
@@ -85,15 +85,15 @@ const data = {
           teacher: "Luiz Inácio Chaves",
           classroom: "Laboratório de Usinagem B4",
           students: "EIN2019",
-          time: "10:15 - 11:05"
+          time: "09:25 - 10:15"
         },
         {
           subject: "Manutenção Industrial e Gestão da Produção - 1592",
           size: 1,
-          teacher: "Vânio Berlin de Souza",
+          teacher: "Wylliam Salviano Gongora",
           classroom: "Sala 9-2",
           students: "EIN2019",
-          time: "09:25 - 10:15"
+          time: "11:05 - 11:55"
         }
       ]
     },
