--- a/docs/turma/ein2020.mdx
+++ b/docs/turma/ein2020.mdx
@@ -25,7 +25,7 @@ const data = {
           subject: "Elementos de Automação - 198",
           size: 2,
           teacher: "Vander Fabio Silveira",
-          classroom: "Laboratório de Máquinas e Acionamentos Elétricos B4",
+          classroom: "Laboratório de Informatica B",
           students: "EIN2020",
           time: "09:25 - 10:15"
         }
@@ -66,7 +66,7 @@ const data = {
         {
           subject: "Filosofia 3 - 204",
           size: 1,
-          teacher: "Fabio Antônio da Silva",
+          teacher: "José Jurandir Pereira Junior",
           classroom: "Sala 8-2",
           students: "EIN2020",
           time: "07:30 - 08:20"
@@ -114,7 +114,7 @@ const data = {
           teacher: "Milton Aparecido Azevedo",
           classroom: "Sala 8-2",
           students: "EIN2020",
-          time: "11:05 - 11:55"
+          time: "08:20 - 09:10"
         },
         {
           subject: "Máquinas e Acionamentos - 1575",
@@ -130,7 +130,7 @@ const data = {
           teacher: "Wylliam Salviano Gongora",
           classroom: "Laboratório de Máquinas e Acionamentos Elétricos B4",
           students: "EIN2020",
-          time: "08:20 - 09:10"
+          time: "11:05 - 11:55"
         }
       ]
     },
