--- a/docs/turma/ein2021.mdx
+++ b/docs/turma/ein2021.mdx
@@ -51,10 +51,10 @@ const data = {
           time: "07:30 - 08:20"
         },
         {
-          subject: "Metrologia - 1550",
+          subject: "Cálculo Mecânico - 154",
           size: 1,
-          teacher: "Sérgio Takahashi",
-          classroom: "Laboratório de Metrologia B4",
+          teacher: "Luiz Inácio Chaves",
+          classroom: "Sala 7-2",
           students: "EIN2021",
           time: "11:05 - 11:55"
         }
@@ -63,14 +63,6 @@ const data = {
     {
       title: "Quarta-Feira",
       timetable: [
-        {
-          subject: "Sociologia 2 - 189",
-          size: 1,
-          teacher: "Everaldo Lorensetti",
-          classroom: "Sala 7-2",
-          students: "EIN2021",
-          time: "07:30 - 08:20"
-        },
         {
           subject: "Geografia 2 - 177",
           size: 1,
@@ -82,18 +74,10 @@ const data = {
         {
           subject: "Artes 2 - 166",
           size: 1,
-          teacher: "Josiane Paula Maltauro",
+          teacher: "Renata Carolina Pereira",
           classroom: "Sala 7-2",
           students: "EIN2021",
-          time: "08:20 - 09:10"
-        },
-        {
-          subject: "Lingua Estrangeira Moderna 1 - Inglês - 179",
-          size: 1,
-          teacher: "Kátia Cristiane Kobus Novaes",
-          classroom: "Sala 7-2",
-          students: "EIN2021",
-          time: "11:05 - 11:55"
+          time: "07:30 - 08:20"
         },
         {
           subject: "Biologia 2 - 168",
@@ -102,6 +86,22 @@ const data = {
           classroom: "Laboratório de Biologia",
           students: "EIN2021",
           time: "10:15 - 11:05"
+        },
+        {
+          subject: "Metrologia - 1550",
+          size: 1,
+          teacher: "Sérgio Takahashi",
+          classroom: "Laboratório de Metrologia B4",
+          students: "EIN2021",
+          time: "11:05 - 11:55"
+        },
+        {
+          subject: "Cálculo Mecânico - 154",
+          size: 1,
+          teacher: "Luiz Inácio Chaves",
+          classroom: "Sala 7-2",
+          students: "EIN2021",
+          time: "08:20 - 09:10"
         }
       ]
     },
@@ -114,7 +114,7 @@ const data = {
           teacher: "Fabio Antônio da Silva",
           classroom: "Sala 7-2",
           students: "EIN2021",
-          time: "09:25 - 10:15"
+          time: "08:20 - 09:10"
         },
         {
           subject: "Educação Física 2 - 170",
@@ -130,12 +130,12 @@ const data = {
           teacher: "Milton Aparecido Azevedo",
           classroom: "Sala 7-2",
           students: "EIN2021",
-          time: "08:20 - 09:10"
+          time: "09:25 - 10:15"
         },
         {
           subject: "Processos de Fabricação 1 - 1552",
           size: 2,
-          teacher: "Vânio Berlin de Souza",
+          teacher: "Sérgio Takahashi",
           classroom: "Laboratório de Usinagem B4",
           students: "EIN2021",
           time: "10:15 - 11:05"
@@ -162,12 +162,20 @@ const data = {
           time: "07:30 - 08:20"
         },
         {
-          subject: "Cálculo Mecânico - 154",
-          size: 2,
-          teacher: "Vânio Berlin de Souza",
+          subject: "Sociologia 2 - 189",
+          size: 1,
+          teacher: "Everaldo Lorensetti",
           classroom: "Sala 7-2",
           students: "EIN2021",
           time: "10:15 - 11:05"
+        },
+        {
+          subject: "Lingua Estrangeira Moderna 1 - Inglês - 179",
+          size: 1,
+          teacher: "Kátia Cristiane Kobus Novaes",
+          classroom: "Sala 7-2",
+          students: "EIN2021",
+          time: "11:05 - 11:55"
         }
       ]
     }
