--- a/docs/turma/ein2022.mdx
+++ b/docs/turma/ein2022.mdx
@@ -30,10 +30,10 @@ const data = {
           time: "09:25 - 10:15"
         },
         {
-          subject: "Informática Instrumental - 1532",
+          subject: "Tecnologia dos Materiais - 1531",
           size: 2,
-          teacher: "Vânio Berlin de Souza+Humberto Fioravante Ferro",
-          classroom: "Laboratório de Informatica C",
+          teacher: "Sérgio Takahashi",
+          classroom: "Sala 6-2",
           students: "EIN2022",
           time: "10:15 - 11:05"
         }
@@ -53,7 +53,7 @@ const data = {
         {
           subject: "Artes 1 - 121",
           size: 1,
-          teacher: "Josiane Paula Maltauro",
+          teacher: "Renata Carolina Pereira",
           classroom: "Sala 6-2",
           students: "EIN2022",
           time: "10:15 - 11:05"
@@ -112,14 +112,6 @@ const data = {
           time: "09:25 - 10:15"
         },
         {
-          subject: "Tecnologia dos Materiais - 1531",
-          size: 2,
-          teacher: "Sérgio Takahashi",
-          classroom: "Sala 6-2",
-          students: "EIN2022",
-          time: "10:15 - 11:05"
-        },
-        {
           subject: "Eletricidade e Medidas Elétricas - 1530",
           size: 2,
           teacher: "Tiago Henrique dos Santos",
@@ -134,6 +126,14 @@ const data = {
           classroom: "Laboratório de Metrologia B4",
           students: "EIN2022 - Grupo B",
           time: "09:25 - 10:15"
+        },
+        {
+          subject: "Informática Instrumental - 1532",
+          size: 2,
+          teacher: "Caroline Domingues Porto do Nascimento Barbieri",
+          classroom: "Laboratório de Informatica C",
+          students: "EIN2022",
+          time: "10:15 - 11:05"
         }
       ]
     },
