--- a/docs/turma/iin2019.mdx
+++ b/docs/turma/iin2019.mdx
@@ -8,7 +8,7 @@ const data = {
         {
           subject: "Filosofia IV - 193",
           size: 1,
-          teacher: "Fabio Antônio da Silva",
+          teacher: "José Jurandir Pereira Junior",
           classroom: "Sala 3-1",
           students: "IIN2019",
           time: "08:20 - 09:10"
@@ -43,17 +43,17 @@ const data = {
       title: "Terça-Feira",
       timetable: [
         {
-          subject: "Língua Estrangeira Moderna II - Inglês - 545",
+          subject: "Física IV - 190",
           size: 2,
-          teacher: "Celina de Oliveira Barbosa Gomes",
-          classroom: "Sala 2-2",
+          teacher: "Polyanna Guimarães e Miranda",
+          classroom: "Laboratório de Física",
           students: "IIN2019",
           time: "07:30 - 08:20"
         },
         {
           subject: "Tópicos Especiais em Linguagem de Programação - 36",
           size: 2,
-          teacher: "Rafael Gil Ferques+Novo(a) professor(a) Informática",
+          teacher: "Rafael Gil Ferques",
           classroom: "Laboratório de Informatica B",
           students: "IIN2019",
           time: "09:25 - 10:15"
@@ -61,7 +61,7 @@ const data = {
         {
           subject: "Tópicos Especiais em Linguagem de Programação - 36",
           size: 1,
-          teacher: "Rafael Gil Ferques+Novo(a) professor(a) Informática",
+          teacher: "Rafael Gil Ferques",
           classroom: "Laboratório de Informatica B",
           students: "IIN2019",
           time: "11:05 - 11:55"
@@ -72,12 +72,20 @@ const data = {
       title: "Quarta-Feira",
       timetable: [
         {
-          subject: "Projeto e Análise de Sistemas - 182",
+          subject: "Língua Estrangeira Moderna II - Inglês - 545",
           size: 2,
-          teacher: "Novo(a) professor(a) Informática+Rafael Gil Ferques",
-          classroom: "Laboratório de Informatica B",
+          teacher: "Celina de Oliveira Barbosa Gomes",
+          classroom: "Sala 2-2",
           students: "IIN2019",
           time: "09:25 - 10:15"
+        },
+        {
+          subject: "Projeto e Análise de Sistemas - 182",
+          size: 2,
+          teacher: "Rafael Gil Ferques",
+          classroom: "Laboratório de Informatica A",
+          students: "IIN2019",
+          time: "07:30 - 08:20"
         },
         {
           subject: "Biologia IV - 196",
@@ -86,14 +94,6 @@ const data = {
           classroom: "Laboratório de Biologia",
           students: "IIN2019",
           time: "11:05 - 11:55"
-        },
-        {
-          subject: "Física IV - 190",
-          size: 2,
-          teacher: "Polyanna Guimarães e Miranda",
-          classroom: "Laboratório de Física",
-          students: "IIN2019",
-          time: "07:30 - 08:20"
         }
       ]
     },
@@ -141,7 +141,7 @@ const data = {
           subject: "Projeto Final de Curso - 181",
           size: 2,
           teacher: "Douglas Barbosa Sousa",
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Informatica B",
           students: "IIN2019",
           time: "07:30 - 08:20"
         },
@@ -156,7 +156,7 @@ const data = {
         {
           subject: "Tópicos Especiais em Tecnologia - 35",
           size: 2,
-          teacher: "Luis Henrique Manosso Von Mecheln+Novo(a) professor(a) Informática",
+          teacher: "Caroline Domingues Porto do Nascimento Barbieri",
           classroom: "Laboratório de Informatica B",
           students: "IIN2019",
           time: "09:25 - 10:15"
