--- a/docs/turma/iiw2020.mdx
+++ b/docs/turma/iiw2020.mdx
@@ -37,10 +37,18 @@ const data = {
         {
           subject: "Filosofia III - 1245",
           size: 1,
-          teacher: "Fabio Antônio da Silva",
+          teacher: "José Jurandir Pereira Junior",
           classroom: "Sala 13-2",
           students: "IIW2020",
           time: "11:05 - 11:55"
+        },
+        {
+          subject: "Serviços em nuvem - 1250",
+          size: 2,
+          teacher: "Caroline Domingues Porto do Nascimento Barbieri",
+          classroom: "Laboratório de Informatica B",
+          students: "IIW2020",
+          time: "07:30 - 08:20"
         },
         {
           subject: "Desenvolvimento Responsivo e Otimização de Sites - 1249",
@@ -54,17 +62,9 @@ const data = {
           subject: "Sistemas Gerenciadores de Conteúdo WEB - 1252",
           size: 2,
           teacher: "Luis Henrique Manosso Von Mecheln",
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Computação Aplicada",
           students: "IIW2020",
           time: "13:10 - 14:00"
-        },
-        {
-          subject: "Língua Portuguesa e Literatura III - 1240",
-          size: 2,
-          teacher: "Michelli Cristina Galli",
-          classroom: "Sala 13-2",
-          students: "IIW2020",
-          time: "07:30 - 08:20"
         },
         {
           subject: "Física III - 1242",
@@ -82,7 +82,7 @@ const data = {
         {
           subject: "Prototipação de Interfaces e Interação Humano-Computador - 1251",
           size: 2,
-          teacher: "Eduardo Alberto Felippsen",
+          teacher: "Caroline Domingues Porto do Nascimento Barbieri",
           classroom: "Laboratório de Computação Aplicada",
           students: "IIW2020",
           time: "07:30 - 08:20"
@@ -135,15 +135,15 @@ const data = {
         {
           subject: "Filosofia III - 1245",
           size: 1,
-          teacher: "Fabio Antônio da Silva",
+          teacher: "José Jurandir Pereira Junior",
           classroom: "Sala 13-2",
           students: "IIW2020",
           time: "07:30 - 08:20"
         },
         {
-          subject: "Serviços em nuvem - 1250",
+          subject: "Língua Portuguesa e Literatura III - 1240",
           size: 2,
-          teacher: "Joaquim José Honório de Lima",
+          teacher: "Michelli Cristina Galli",
           classroom: "Laboratório de Informatica B",
           students: "IIW2020",
           time: "09:25 - 10:15"
@@ -173,7 +173,7 @@ const data = {
           subject: "Projeto Integrador III - 1253",
           size: 2,
           teacher: "Olavo José Luiz Junior",
-          classroom: "Laboratório de Informatica B",
+          classroom: "Laboratório de Informatica A",
           students: "IIW2020",
           time: "07:30 - 08:20"
         }
