--- a/docs/professor/eduardo_alberto_felippsen.mdx
+++ b/docs/professor/eduardo_alberto_felippsen.mdx
@@ -15,6 +15,14 @@ const data = {
           teacher: "Eduardo Alberto Felippsen",
           classroom: "BioPark-01",
           students: "IIW2022B",
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "Fundamentos de informática - 1076",
+          size: 2,
+          teacher: "Eduardo Alberto Felippsen",
+          classroom: "BioPark-01",
+          students: "IIW2022B",
           time: "07:30 - 08:20"
         },
         {
@@ -38,14 +46,6 @@ const data = {
     {
       title: "Quarta-Feira",
       timetable: [
-        {
-          subject: "Prototipação de Interfaces e Interação Humano-Computador - 1251",
-          size: 2,
-          teacher: "Eduardo Alberto Felippsen",
-          classroom: "Laboratório de Computação Aplicada",
-          students: "IIW2020",
-          time: "07:30 - 08:20"
-        },
         {
           subject: "Lógica de Programação - 1483",
           size: 2,
@@ -73,7 +73,7 @@ const data = {
           teacher: "Eduardo Alberto Felippsen",
           classroom: "BioPark-01",
           students: "IIW2022B",
-          time: "10:15 - 11:05"
+          time: "07:30 - 08:20"
         },
         {
           subject: "Linguagem de Programação - 1484",
