--- a/docs/professor/humberto_fioravante_ferro.mdx
+++ b/docs/professor/humberto_fioravante_ferro.mdx
@@ -4,16 +4,7 @@ const data = {
   weekClasses: [
     {
       title: "Segunda-Feira",
-      timetable: [
-        {
-          subject: "Informática Instrumental - 1532",
-          size: 2,
-          teacher: "Vânio Berlin de Souza+Humberto Fioravante Ferro",
-          classroom: "Laboratório de Informatica C",
-          students: "EIN2022",
-          time: "10:15 - 11:05"
-        }
-      ]
+      timetable: []
     },
     {
       title: "Terça-Feira",
@@ -27,18 +18,10 @@ const data = {
       title: "Quinta-Feira",
       timetable: [
         {
-          subject: "Fundamentos de informática - 1076",
-          size: 2,
-          teacher: "Humberto Fioravante Ferro",
-          classroom: "BioPark-01",
-          students: "IIW2022B",
-          time: "07:30 - 08:20"
-        },
-        {
           subject: "Programação Orientada a Objetos - 21",
           size: 2,
           teacher: "Humberto Fioravante Ferro",
-          classroom: "Laboratório de Informatica B",
+          classroom: "Laboratório de Informatica A",
           students: "TADS2020",
           time: "19:00 - 19:50"
         },
@@ -46,7 +29,7 @@ const data = {
           subject: "Programação Orientada a Objetos - 21",
           size: 2,
           teacher: "Humberto Fioravante Ferro",
-          classroom: "Laboratório de Informatica B",
+          classroom: "Laboratório de Informatica A",
           students: "TADS2020",
           time: "21:00 - 21:50"
         }
