--- a/docs/professor/jose_jurandir_pereira_junior.mdx
+++ b/docs/professor/jose_jurandir_pereira_junior.mdx
@@ -1,86 +1,80 @@
 import { Grid } from "../../src/components/Grid";
 const data = {
-  title: "Milton Aparecido Azevedo",
+  title: "José Jurandir Pereira Junior",
   weekClasses: [
     {
       title: "Segunda-Feira",
       timetable: [
         {
-          subject: "História 1 - 131",
+          subject: "Filosofia IV - 193",
           size: 1,
-          teacher: "Milton Aparecido Azevedo",
-          classroom: "Sala 6-2",
-          students: "EIN2022",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "História 4 - 229",
-          size: 2,
-          teacher: "Milton Aparecido Azevedo",
-          classroom: "Sala 9-2",
-          students: "EIN2019",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "História I - 626",
-          size: 1,
-          teacher: "Milton Aparecido Azevedo",
-          classroom: "Sala 15-2",
-          students: "AGO2021",
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Sociologia da educação - 1303",
-          size: 2,
-          teacher: "Milton Aparecido Azevedo",
-          classroom: "Sala 11-2",
-          students: "BIO2020",
-          time: "21:00 - 21:50"
+          teacher: "José Jurandir Pereira Junior",
+          classroom: "Sala 3-1",
+          students: "IIN2019",
+          time: "08:20 - 09:10"
         }
       ]
     },
     {
       title: "Terça-Feira",
-      timetable: []
+      timetable: [
+        {
+          subject: "Filosofia 4 - 223",
+          size: 1,
+          teacher: "José Jurandir Pereira Junior",
+          classroom: "Sala 9-2",
+          students: "EIN2019",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Filosofia III - 1088",
+          size: 1,
+          teacher: "José Jurandir Pereira Junior",
+          classroom: "Sala 16-2",
+          students: "AGO2020",
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Filosofia III - 1088",
+          size: 1,
+          teacher: "José Jurandir Pereira Junior",
+          classroom: "Sala 16-2",
+          students: "AGO2020",
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "Filosofia III - 1245",
+          size: 1,
+          teacher: "José Jurandir Pereira Junior",
+          classroom: "Sala 13-2",
+          students: "IIW2020",
+          time: "11:05 - 11:55"
+        }
+      ]
     },
     {
       title: "Quarta-Feira",
-      timetable: []
+      timetable: [
+        {
+          subject: "Filosofia 3 - 204",
+          size: 1,
+          teacher: "José Jurandir Pereira Junior",
+          classroom: "Sala 8-2",
+          students: "EIN2020",
+          time: "07:30 - 08:20"
+        }
+      ]
     },
     {
       title: "Quinta-Feira",
       timetable: [
         {
-          subject: "História 2 - 178",
+          subject: "Filosofia III - 1245",
           size: 1,
-          teacher: "Milton Aparecido Azevedo",
-          classroom: "Sala 7-2",
-          students: "EIN2021",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "História 3 - 207",
-          size: 1,
-          teacher: "Milton Aparecido Azevedo",
-          classroom: "Sala 8-2",
-          students: "EIN2020",
-          time: "08:20 - 09:10"
-        },
-        {
-          subject: "História I - 626",
-          size: 1,
-          teacher: "Milton Aparecido Azevedo",
-          classroom: "Sala 15-2",
-          students: "AGO2021",
+          teacher: "José Jurandir Pereira Junior",
+          classroom: "Sala 13-2",
+          students: "IIW2020",
           time: "07:30 - 08:20"
-        },
-        {
-          subject: "História II - 1089",
-          size: 2,
-          teacher: "Milton Aparecido Azevedo",
-          classroom: "Sala 16-2",
-          students: "AGO2020",
-          time: "13:10 - 14:00"
         }
       ]
     },
@@ -165,7 +159,7 @@ const data = {
   ]
 }
 
-# Milton Aparecido Azevedo
+# José Jurandir Pereira Junior
 
 <div>
     {
