--- a/docs/professor/luis_henrique_manosso_von_mecheln.mdx
+++ b/docs/professor/luis_henrique_manosso_von_mecheln.mdx
@@ -29,7 +29,7 @@ const data = {
           subject: "Sistemas Gerenciadores de Conteúdo WEB - 1252",
           size: 2,
           teacher: "Luis Henrique Manosso Von Mecheln",
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Computação Aplicada",
           students: "IIW2020",
           time: "13:10 - 14:00"
         },
@@ -45,16 +45,7 @@ const data = {
     },
     {
       title: "Quarta-Feira",
-      timetable: [
-        {
-          subject: "Desenvolvimento WEB Orientado a Objetos - 1237",
-          size: 2,
-          teacher: "Luis Henrique Manosso Von Mecheln",
-          classroom: "Laboratório de Computação Aplicada",
-          students: "IIW2021",
-          time: "10:15 - 11:05"
-        }
-      ]
+      timetable: []
     },
     {
       title: "Quinta-Feira",
@@ -64,12 +55,12 @@ const data = {
       title: "Sexta-Feira",
       timetable: [
         {
-          subject: "Tópicos Especiais em Tecnologia - 35",
+          subject: "Desenvolvimento WEB Orientado a Objetos - 1237",
           size: 2,
-          teacher: "Luis Henrique Manosso Von Mecheln+Novo(a) professor(a) Informática",
-          classroom: "Laboratório de Informatica B",
-          students: "IIN2019",
-          time: "09:25 - 10:15"
+          teacher: "Luis Henrique Manosso Von Mecheln",
+          classroom: "Laboratório de Computação Aplicada",
+          students: "IIW2021",
+          time: "07:30 - 08:20"
         }
       ]
     }
