--- a/docs/professor/michelli_cristina_galli.mdx
+++ b/docs/professor/michelli_cristina_galli.mdx
@@ -15,7 +15,7 @@ const data = {
           teacher: "Michelli Cristina Galli",
           classroom: "Sala 12-2",
           students: "IIW2021",
-          time: "09:25 - 10:15"
+          time: "11:05 - 11:55"
         },
         {
           subject: "Língua Portuguesa e Literatura II - 1226",
@@ -23,15 +23,15 @@ const data = {
           teacher: "Michelli Cristina Galli",
           classroom: "Sala 12-2",
           students: "IIW2021",
-          time: "10:15 - 11:05"
+          time: "07:30 - 08:20"
         },
         {
-          subject: "Língua Portuguesa e Literatura III - 1240",
+          subject: "Língua Portuguesa e Literatura II - 613",
           size: 2,
           teacher: "Michelli Cristina Galli",
-          classroom: "Sala 13-2",
-          students: "IIW2020",
-          time: "07:30 - 08:20"
+          classroom: "Sala 15-2",
+          students: "AGO2021",
+          time: "09:25 - 10:15"
         }
       ]
     },
@@ -57,6 +57,14 @@ const data = {
           classroom: "Sala 11-2",
           students: "IIW2022A",
           time: "07:30 - 08:20"
+        },
+        {
+          subject: "Língua Portuguesa e Literatura III - 1240",
+          size: 2,
+          teacher: "Michelli Cristina Galli",
+          classroom: "Laboratório de Informatica B",
+          students: "IIW2020",
+          time: "09:25 - 10:15"
         }
       ]
     },
@@ -81,19 +89,11 @@ const data = {
         },
         {
           subject: "Língua Portuguesa e Literatura II - 613",
-          size: 2,
-          teacher: "Michelli Cristina Galli",
-          classroom: "Sala 15-2",
-          students: "AGO2021",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Língua Portuguesa e Literatura II - 613",
           size: 1,
           teacher: "Michelli Cristina Galli",
           classroom: "Sala 15-2",
           students: "AGO2021",
-          time: "11:05 - 11:55"
+          time: "09:25 - 10:15"
         }
       ]
     }
