--- a/docs/professor/rafael_gil_ferques.mdx
+++ b/docs/professor/rafael_gil_ferques.mdx
@@ -12,7 +12,7 @@ const data = {
         {
           subject: "Linguagens de apresentação e estruturação de conteúdos - 1074",
           size: 2,
-          teacher: "Rafael Gil Ferques+Novo(a) professor(a) Informática",
+          teacher: "Rafael Gil Ferques",
           classroom: "Laboratório de Informatica A",
           students: "IIW2022A",
           time: "07:30 - 08:20"
@@ -20,7 +20,7 @@ const data = {
         {
           subject: "Tópicos Especiais em Linguagem de Programação - 36",
           size: 2,
-          teacher: "Rafael Gil Ferques+Novo(a) professor(a) Informática",
+          teacher: "Rafael Gil Ferques",
           classroom: "Laboratório de Informatica B",
           students: "IIN2019",
           time: "09:25 - 10:15"
@@ -28,7 +28,7 @@ const data = {
         {
           subject: "Tópicos Especiais em Linguagem de Programação - 36",
           size: 1,
-          teacher: "Rafael Gil Ferques+Novo(a) professor(a) Informática",
+          teacher: "Rafael Gil Ferques",
           classroom: "Laboratório de Informatica B",
           students: "IIN2019",
           time: "11:05 - 11:55"
@@ -41,15 +41,15 @@ const data = {
         {
           subject: "Projeto e Análise de Sistemas - 182",
           size: 2,
-          teacher: "Novo(a) professor(a) Informática+Rafael Gil Ferques",
-          classroom: "Laboratório de Informatica B",
+          teacher: "Rafael Gil Ferques",
+          classroom: "Laboratório de Informatica A",
           students: "IIN2019",
-          time: "09:25 - 10:15"
+          time: "07:30 - 08:20"
         },
         {
           subject: "Engenharia de Software - 20",
           size: 2,
-          teacher: "Rafael Gil Ferques+Novo(a) professor(a) Informática",
+          teacher: "Rafael Gil Ferques",
           classroom: "Laboratório de Informatica A",
           students: "TADS2020",
           time: "21:00 - 21:50"
@@ -57,10 +57,10 @@ const data = {
         {
           subject: "Linguagens de apresentação e estruturação de conteúdos - 1074",
           size: 2,
-          teacher: "Rafael Gil Ferques+Novo(a) professor(a) Informática",
+          teacher: "Rafael Gil Ferques",
           classroom: "Laboratório de Informatica A",
           students: "IIW2022A",
-          time: "07:30 - 08:20"
+          time: "09:25 - 10:15"
         }
       ]
     },
