--- a/docs/professor/tiago_amaral_silva.mdx
+++ b/docs/professor/tiago_amaral_silva.mdx
@@ -10,17 +10,17 @@ const data = {
       title: "Terça-Feira",
       timetable: [
         {
-          subject: "Educação Física II - 615",
+          subject: "Educação Física III - 1082",
           size: 2,
           teacher: "Tiago Amaral Silva",
           classroom: "Educação Física / Sala 4 B2",
-          students: "AGO2021",
+          students: "AGO2020",
           time: "07:30 - 08:20"
         },
         {
           subject: "Projeto Integrador - 2211",
           size: 2,
-          teacher: "Tiago Amaral Silva",
+          teacher: "Tiago Amaral Silva+Josiane Paula Maltauro",
           classroom: "Sala 13-2",
           students: "AGR2021",
           time: "19:00 - 19:50"
@@ -31,12 +31,12 @@ const data = {
       title: "Quarta-Feira",
       timetable: [
         {
-          subject: "Educação Física III - 1082",
+          subject: "Educação Física II - 615",
           size: 2,
           teacher: "Tiago Amaral Silva",
           classroom: "Educação Física / Sala 4 B2",
-          students: "AGO2020",
-          time: "10:15 - 11:05"
+          students: "AGO2021",
+          time: "09:25 - 10:15"
         }
       ]
     },
