--- a/docs/professor/vanio_berlin_de_souza.mdx
+++ b/docs/professor/vanio_berlin_de_souza.mdx
@@ -4,20 +4,20 @@ const data = {
   weekClasses: [
     {
       title: "Segunda-Feira",
-      timetable: [
-        {
-          subject: "Informática Instrumental - 1532",
-          size: 2,
-          teacher: "Vânio Berlin de Souza+Humberto Fioravante Ferro",
-          classroom: "Laboratório de Informatica C",
-          students: "EIN2022",
-          time: "10:15 - 11:05"
-        }
-      ]
+      timetable: []
     },
     {
       title: "Terça-Feira",
-      timetable: []
+      timetable: [
+        {
+          subject: "Elementos de Máquinas - 349",
+          size: 2,
+          teacher: "Vânio Berlin de Souza",
+          classroom: "Sala 8-2",
+          students: "ELM2021",
+          time: "21:00 - 21:50"
+        }
+      ]
     },
     {
       title: "Quarta-Feira",
@@ -29,14 +29,6 @@ const data = {
           classroom: "Sala 8-2",
           students: "ELM2021",
           time: "21:00 - 21:50"
-        },
-        {
-          subject: "Manutenção Industrial e Gestão da Produção - 1592",
-          size: 1,
-          teacher: "Vânio Berlin de Souza",
-          classroom: "Sala 9-2",
-          students: "EIN2019",
-          time: "09:25 - 10:15"
         }
       ]
     },
@@ -58,14 +50,6 @@ const data = {
           classroom: "Sala 8-2",
           students: "ELM2021",
           time: "19:00 - 19:50"
-        },
-        {
-          subject: "Processos de Fabricação 1 - 1552",
-          size: 2,
-          teacher: "Vânio Berlin de Souza",
-          classroom: "Laboratório de Usinagem B4",
-          students: "EIN2021",
-          time: "10:15 - 11:05"
         }
       ]
     },
@@ -79,14 +63,6 @@ const data = {
           classroom: "Sala 8-2",
           students: "ELM2021",
           time: "19:00 - 19:50"
-        },
-        {
-          subject: "Cálculo Mecânico - 154",
-          size: 2,
-          teacher: "Vânio Berlin de Souza",
-          classroom: "Sala 7-2",
-          students: "EIN2021",
-          time: "10:15 - 11:05"
         },
         {
           subject: "Gestão da Produção\n (PPC2020) - 2314",
