--- a/docs/professor/wylliam_salviano_gongora.mdx
+++ b/docs/professor/wylliam_salviano_gongora.mdx
@@ -38,7 +38,16 @@ const data = {
     },
     {
       title: "Quarta-Feira",
-      timetable: []
+      timetable: [
+        {
+          subject: "Manutenção Industrial e Gestão da Produção - 1592",
+          size: 1,
+          teacher: "Wylliam Salviano Gongora",
+          classroom: "Sala 9-2",
+          students: "EIN2019",
+          time: "11:05 - 11:55"
+        }
+      ]
     },
     {
       title: "Quinta-Feira",
@@ -57,7 +66,7 @@ const data = {
           teacher: "Wylliam Salviano Gongora",
           classroom: "Laboratório de Máquinas e Acionamentos Elétricos B4",
           students: "EIN2020",
-          time: "08:20 - 09:10"
+          time: "11:05 - 11:55"
         }
       ]
     },
