--- a/docs/sala/biopark-01.mdx
+++ b/docs/sala/biopark-01.mdx
@@ -48,15 +48,15 @@ const data = {
           teacher: "Eduardo Alberto Felippsen",
           classroom: "BioPark-01",
           students: "IIW2022B",
-          time: "07:30 - 08:20"
+          time: "10:15 - 11:05"
         },
         {
-          subject: "Lógica de programação - 1075",
+          subject: "Fundamentos de informática - 1076",
           size: 2,
-          teacher: "Rafael Luis Bartz",
+          teacher: "Eduardo Alberto Felippsen",
           classroom: "BioPark-01",
           students: "IIW2022B",
-          time: "10:15 - 11:05"
+          time: "07:30 - 08:20"
         }
       ]
     },
@@ -80,9 +80,9 @@ const data = {
           time: "07:30 - 08:20"
         },
         {
-          subject: "Projeto integrador I - 1078",
+          subject: "Lógica de programação - 1075",
           size: 2,
-          teacher: "Olavo José Luiz Junior",
+          teacher: "Rafael Luis Bartz",
           classroom: "BioPark-01",
           students: "IIW2022B",
           time: "10:15 - 11:05"
@@ -114,15 +114,15 @@ const data = {
           teacher: "Eduardo Alberto Felippsen",
           classroom: "BioPark-01",
           students: "IIW2022B",
-          time: "10:15 - 11:05"
+          time: "07:30 - 08:20"
         },
         {
-          subject: "Fundamentos de informática - 1076",
+          subject: "Projeto integrador I - 1078",
           size: 2,
-          teacher: "Humberto Fioravante Ferro",
+          teacher: "Caroline Domingues Porto do Nascimento Barbieri",
           classroom: "BioPark-01",
           students: "IIW2022B",
-          time: "07:30 - 08:20"
+          time: "10:15 - 11:05"
         }
       ]
     },
