--- a/docs/sala/laboratorio_de_computacao_aplicada.mdx
+++ b/docs/sala/laboratorio_de_computacao_aplicada.mdx
@@ -24,6 +24,14 @@ const data = {
           classroom: "Laboratório de Computação Aplicada",
           students: "TADS2020",
           time: "19:00 - 19:50"
+        },
+        {
+          subject: "Sistemas Gerenciadores de Conteúdo WEB - 1252",
+          size: 2,
+          teacher: "Luis Henrique Manosso Von Mecheln",
+          classroom: "Laboratório de Computação Aplicada",
+          students: "IIW2020",
+          time: "13:10 - 14:00"
         }
       ]
     },
@@ -33,18 +41,10 @@ const data = {
         {
           subject: "Prototipação de Interfaces e Interação Humano-Computador - 1251",
           size: 2,
-          teacher: "Eduardo Alberto Felippsen",
+          teacher: "Caroline Domingues Porto do Nascimento Barbieri",
           classroom: "Laboratório de Computação Aplicada",
           students: "IIW2020",
           time: "07:30 - 08:20"
-        },
-        {
-          subject: "Desenvolvimento WEB Orientado a Objetos - 1237",
-          size: 2,
-          teacher: "Luis Henrique Manosso Von Mecheln",
-          classroom: "Laboratório de Computação Aplicada",
-          students: "IIW2021",
-          time: "10:15 - 11:05"
         }
       ]
     },
@@ -55,6 +55,14 @@ const data = {
     {
       title: "Sexta-Feira",
       timetable: [
+        {
+          subject: "Desenvolvimento WEB Orientado a Objetos - 1237",
+          size: 2,
+          teacher: "Luis Henrique Manosso Von Mecheln",
+          classroom: "Laboratório de Computação Aplicada",
+          students: "IIW2021",
+          time: "07:30 - 08:20"
+        },
         {
           subject: "Administração de Sistemas Operacionais e Redes - 1236",
           size: 2,
