--- a/docs/sala/laboratorio_de_informatica_a.mdx
+++ b/docs/sala/laboratorio_de_informatica_a.mdx
@@ -8,18 +8,34 @@ const data = {
         {
           subject: "Fundamentos de informática - 1076",
           size: 2,
-          teacher: "Douglas Barbosa Sousa",
+          teacher: "Caroline Domingues Porto do Nascimento Barbieri",
           classroom: "Laboratório de Informatica A",
           students: "IIW2022A",
           time: "07:30 - 08:20"
         },
         {
-          subject: "Informática instrumental e aplicada - 468",
+          subject: "Laboratório de Banco de Dados - 1238",
           size: 2,
           teacher: "Douglas Barbosa Sousa",
           classroom: "Laboratório de Informatica A",
-          students: "AGO2022 - Grupo A",
-          time: "15:05 - 15:55"
+          students: "IIW2021",
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Programação para Sistemas Embarcados - 22",
+          size: 2,
+          teacher: "Marcos Antonio Guido",
+          classroom: "Laboratório de Informatica A",
+          students: "TADS2020",
+          time: "19:00 - 19:50"
+        },
+        {
+          subject: "Segurança em Sistemas e Redes - 23",
+          size: 1,
+          teacher: "Marcos Antonio Guido",
+          classroom: "Laboratório de Informatica A",
+          students: "TADS2020",
+          time: "21:50 - 22:40"
         },
         {
           subject: "Trabalho de Conclusão de Curso - 26",
@@ -43,20 +59,20 @@ const data = {
           time: "10:15 - 11:05"
         },
         {
+          subject: "Projeto Integrador II - 1239",
+          size: 2,
+          teacher: "Alexandre Rodrigues Monge",
+          classroom: "Laboratório de Informatica A",
+          students: "IIW2021",
+          time: "13:10 - 14:00"
+        },
+        {
           subject: "Projeto integrador I - 1078",
           size: 2,
           teacher: "Alexandre Rodrigues Monge",
           classroom: "Laboratório de Informatica A",
           students: "IIW2022A",
           time: "15:05 - 15:55"
-        },
-        {
-          subject: "Sistemas Gerenciadores de Conteúdo WEB - 1252",
-          size: 2,
-          teacher: "Luis Henrique Manosso Von Mecheln",
-          classroom: "Laboratório de Informatica A",
-          students: "IIW2020",
-          time: "13:10 - 14:00"
         },
         {
           subject: "Telecomunicações e Geoprocessamento - 24",
@@ -69,7 +85,7 @@ const data = {
         {
           subject: "Linguagens de apresentação e estruturação de conteúdos - 1074",
           size: 2,
-          teacher: "Rafael Gil Ferques+Novo(a) professor(a) Informática",
+          teacher: "Rafael Gil Ferques",
           classroom: "Laboratório de Informatica A",
           students: "IIW2022A",
           time: "07:30 - 08:20"
@@ -88,9 +104,17 @@ const data = {
           time: "19:00 - 19:50"
         },
         {
+          subject: "Projeto e Análise de Sistemas - 182",
+          size: 2,
+          teacher: "Rafael Gil Ferques",
+          classroom: "Laboratório de Informatica A",
+          students: "IIN2019",
+          time: "07:30 - 08:20"
+        },
+        {
           subject: "Engenharia de Software - 20",
           size: 2,
-          teacher: "Rafael Gil Ferques+Novo(a) professor(a) Informática",
+          teacher: "Rafael Gil Ferques",
           classroom: "Laboratório de Informatica A",
           students: "TADS2020",
           time: "21:00 - 21:50"
@@ -98,28 +122,37 @@ const data = {
         {
           subject: "Linguagens de apresentação e estruturação de conteúdos - 1074",
           size: 2,
-          teacher: "Rafael Gil Ferques+Novo(a) professor(a) Informática",
+          teacher: "Rafael Gil Ferques",
           classroom: "Laboratório de Informatica A",
           students: "IIW2022A",
-          time: "07:30 - 08:20"
+          time: "09:25 - 10:15"
         }
       ]
     },
     {
       title: "Quinta-Feira",
-      timetable: []
+      timetable: [
+        {
+          subject: "Programação Orientada a Objetos - 21",
+          size: 2,
+          teacher: "Humberto Fioravante Ferro",
+          classroom: "Laboratório de Informatica A",
+          students: "TADS2020",
+          time: "19:00 - 19:50"
+        },
+        {
+          subject: "Programação Orientada a Objetos - 21",
+          size: 2,
+          teacher: "Humberto Fioravante Ferro",
+          classroom: "Laboratório de Informatica A",
+          students: "TADS2020",
+          time: "21:00 - 21:50"
+        }
+      ]
     },
     {
       title: "Sexta-Feira",
       timetable: [
-        {
-          subject: "Projeto Final de Curso - 181",
-          size: 2,
-          teacher: "Douglas Barbosa Sousa",
-          classroom: "Laboratório de Informatica A",
-          students: "IIN2019",
-          time: "07:30 - 08:20"
-        },
         {
           subject: "Segurança em Sistemas e Redes - 23",
           size: 2,
@@ -129,12 +162,20 @@ const data = {
           time: "21:00 - 21:50"
         },
         {
-          subject: "Estatística aplicada a estratégias empresariais - 1514",
+          subject: "Tópicos Especiais em Tecnologia da Informação - 25",
           size: 2,
-          teacher: "Mauro César de Souza Siena",
+          teacher: "Marcos Antonio Guido",
           classroom: "Laboratório de Informatica A",
-          students: "TGC2022",
+          students: "TADS2020",
           time: "19:00 - 19:50"
+        },
+        {
+          subject: "Projeto Integrador III - 1253",
+          size: 2,
+          teacher: "Olavo José Luiz Junior",
+          classroom: "Laboratório de Informatica A",
+          students: "IIW2020",
+          time: "07:30 - 08:20"
         }
       ]
     }
