--- a/docs/sala/sala_15-2.mdx
+++ b/docs/sala/sala_15-2.mdx
@@ -22,14 +22,6 @@ const data = {
           time: "15:05 - 15:55"
         },
         {
-          subject: "Geografia II - 623",
-          size: 2,
-          teacher: "Jhones Donizetti Mendes",
-          classroom: "Sala 15-2",
-          students: "AGO2021",
-          time: "09:25 - 10:15"
-        },
-        {
           subject: "Cultura e Cinema Nacional II - 1192",
           size: 1,
           teacher: "Josiane Paula Maltauro",
@@ -60,6 +52,14 @@ const data = {
           classroom: "Sala 15-2",
           students: "AGO2021",
           time: "07:30 - 08:20"
+        },
+        {
+          subject: "Sociologia Rural - 625",
+          size: 2,
+          teacher: "Tatiane Martinazzo Portz",
+          classroom: "Sala 15-2",
+          students: "AGO2021",
+          time: "09:25 - 10:15"
         }
       ]
     },
@@ -67,9 +67,17 @@ const data = {
       title: "Terça-Feira",
       timetable: [
         {
+          subject: "Geografia II - 623",
+          size: 2,
+          teacher: "Jhones Donizetti Mendes",
+          classroom: "Sala 15-2",
+          students: "AGO2021",
+          time: "07:30 - 08:20"
+        },
+        {
           subject: "Artes II - 614",
           size: 2,
-          teacher: "Josiane Paula Maltauro",
+          teacher: "Renata Carolina Pereira",
           classroom: "Sala 15-2",
           students: "AGO2021",
           time: "15:05 - 15:55"
@@ -91,20 +99,20 @@ const data = {
           time: "21:00 - 21:50"
         },
         {
+          subject: "Língua Portuguesa e Literatura II - 613",
+          size: 2,
+          teacher: "Michelli Cristina Galli",
+          classroom: "Sala 15-2",
+          students: "AGO2021",
+          time: "09:25 - 10:15"
+        },
+        {
           subject: "Culturas I - 627",
           size: 1,
           teacher: "Sônia Maria Mandotti",
           classroom: "Sala 15-2",
           students: "AGO2021",
           time: "11:05 - 11:55"
-        },
-        {
-          subject: "Sociologia Rural - 625",
-          size: 2,
-          teacher: "Tatiane Martinazzo Portz",
-          classroom: "Sala 15-2",
-          students: "AGO2021",
-          time: "09:25 - 10:15"
         }
       ]
     },
@@ -128,20 +136,20 @@ const data = {
           time: "21:00 - 21:50"
         },
         {
-          subject: "Construções e Instalações Rurais - 630",
-          size: 2,
-          teacher: "Elias Franco",
-          classroom: "Sala 15-2",
-          students: "AGO2021",
-          time: "09:25 - 10:15"
-        },
-        {
           subject: "Sistemas Agroflorestais - 629",
           size: 2,
           teacher: "Elias Franco",
           classroom: "Sala 15-2",
           students: "AGO2021",
           time: "07:30 - 08:20"
+        },
+        {
+          subject: "Filosofia II - 624",
+          size: 1,
+          teacher: "Fabio Antônio da Silva",
+          classroom: "Sala 15-2",
+          students: "AGO2021",
+          time: "11:05 - 11:55"
         }
       ]
     },
@@ -155,14 +163,6 @@ const data = {
           classroom: "Sala 15-2",
           students: "TGC2021",
           time: "21:00 - 21:50"
-        },
-        {
-          subject: "Filosofia II - 624",
-          size: 1,
-          teacher: "Fabio Antônio da Silva",
-          classroom: "Sala 15-2",
-          students: "AGO2021",
-          time: "15:55 - 16:45"
         },
         {
           subject: "Promoção e organização de eventos empresariais - 1495",
@@ -234,12 +234,12 @@ const data = {
           time: "21:00 - 21:50"
         },
         {
-          subject: "Língua Portuguesa e Literatura II - 613",
+          subject: "Construções e Instalações Rurais - 630",
           size: 2,
-          teacher: "Michelli Cristina Galli",
+          teacher: "Elias Franco",
           classroom: "Sala 15-2",
           students: "AGO2021",
-          time: "09:25 - 10:15"
+          time: "10:15 - 11:05"
         },
         {
           subject: "Língua Portuguesa e Literatura II - 613",
@@ -247,7 +247,7 @@ const data = {
           teacher: "Michelli Cristina Galli",
           classroom: "Sala 15-2",
           students: "AGO2021",
-          time: "11:05 - 11:55"
+          time: "09:25 - 10:15"
         }
       ]
     }
