--- a/docs/sala/sala_3-1.mdx
+++ b/docs/sala/sala_3-1.mdx
@@ -16,7 +16,7 @@ const data = {
         {
           subject: "Filosofia IV - 193",
           size: 1,
-          teacher: "Fabio Antônio da Silva",
+          teacher: "José Jurandir Pereira Junior",
           classroom: "Sala 3-1",
           students: "IIN2019",
           time: "08:20 - 09:10"
