--- a/docs/sala/sala_9-2.mdx
+++ b/docs/sala/sala_9-2.mdx
@@ -53,7 +53,7 @@ const data = {
         {
           subject: "Filosofia 4 - 223",
           size: 1,
-          teacher: "Fabio Antônio da Silva",
+          teacher: "José Jurandir Pereira Junior",
           classroom: "Sala 9-2",
           students: "EIN2019",
           time: "07:30 - 08:20"
@@ -61,7 +61,7 @@ const data = {
         {
           subject: "Artes 3 - 221",
           size: 1,
-          teacher: "Josiane Paula Maltauro",
+          teacher: "Renata Carolina Pereira",
           classroom: "Sala 9-2",
           students: "EIN2019",
           time: "08:20 - 09:10"
@@ -106,10 +106,10 @@ const data = {
         {
           subject: "Manutenção Industrial e Gestão da Produção - 1592",
           size: 1,
-          teacher: "Vânio Berlin de Souza",
+          teacher: "Wylliam Salviano Gongora",
           classroom: "Sala 9-2",
           students: "EIN2019",
-          time: "09:25 - 10:15"
+          time: "11:05 - 11:55"
         }
       ]
     },
@@ -131,6 +131,14 @@ const data = {
           classroom: "Sala 9-2",
           students: "BIO_ESPECIAL",
           time: "15:55 - 16:45"
+        },
+        {
+          subject: "Aula Livre",
+          size: 2,
+          teacher: "",
+          classroom: "Sala 9-2",
+          students: "BIO_ESPECIAL",
+          time: "21:00 - 21:50"
         }
       ]
     },
@@ -144,14 +152,6 @@ const data = {
           classroom: "Sala 9-2",
           students: "BIO_ESPECIAL",
           time: "15:55 - 16:45"
-        },
-        {
-          subject: "Aula Livre",
-          size: 2,
-          teacher: "",
-          classroom: "Sala 9-2",
-          students: "BIO_ESPECIAL",
-          time: "21:00 - 21:50"
         }
       ]
     }
