--- a/docs/turma/elm2021.mdx
+++ b/docs/turma/elm2021.mdx
@@ -27,20 +27,20 @@ const data = {
       title: "Terça-Feira",
       timetable: [
         {
-          subject: "Programação de Equipamentos Industriais - 348",
+          subject: "Elementos de Máquinas - 349",
           size: 2,
-          teacher: "Luiz Inácio Chaves",
+          teacher: "Vânio Berlin de Souza",
           classroom: "Sala 8-2",
           students: "ELM2021",
-          time: "19:00 - 19:50"
+          time: "21:00 - 21:50"
         },
         {
           subject: "Programação de Equipamentos Industriais - 348",
           size: 2,
           teacher: "Luiz Inácio Chaves",
-          classroom: "Sala 8-2",
+          classroom: "Laboratório de Informatica C",
           students: "ELM2021",
-          time: "21:00 - 21:50"
+          time: "19:00 - 19:50"
         }
       ]
     },
@@ -48,10 +48,10 @@ const data = {
       title: "Quarta-Feira",
       timetable: [
         {
-          subject: "Elementos de Máquinas - 349",
+          subject: "Programação de Equipamentos Industriais - 348",
           size: 2,
           teacher: "Luiz Inácio Chaves",
-          classroom: "Sala 8-2",
+          classroom: "Laboratório de Informatica C",
           students: "ELM2021",
           time: "19:00 - 19:50"
         },
