--- a/docs/turma/fpe2022-2.mdx
+++ b/docs/turma/fpe2022-2.mdx
@@ -1,6 +1,6 @@
 import { Grid } from "../../src/components/Grid";
 const data = {
-  title: "Laboratório de Máquinas e Acionamentos Elétricos B4",
+  title: "FPE2022-2",
   weekClasses: [
     {
       title: "Segunda-Feira",
@@ -12,26 +12,43 @@ const data = {
     },
     {
       title: "Quarta-Feira",
-      timetable: []
+      timetable: [
+        {
+          subject: "Língua Portuguesa para Estrangeiros - 2252",
+          size: 2,
+          teacher: "Pedro Leites Junior",
+          classroom: "",
+          students: "FPE2022-2",
+          time: "19:00 - 19:50"
+        },
+        {
+          subject: "Língua Portuguesa para Estrangeiros - 2252",
+          size: 2,
+          teacher: "Pedro Leites Junior",
+          classroom: "",
+          students: "FPE2022-2",
+          time: "21:00 - 21:50"
+        }
+      ]
     },
     {
       title: "Quinta-Feira",
       timetable: [
         {
-          subject: "Máquinas e Acionamentos - 1575",
+          subject: "Cultura e Identidade Brasileira - 2253",
           size: 2,
-          teacher: "Wylliam Salviano Gongora",
-          classroom: "Laboratório de Máquinas e Acionamentos Elétricos B4",
-          students: "EIN2020",
-          time: "09:25 - 10:15"
+          teacher: "Celina de Oliveira Barbosa Gomes",
+          classroom: "",
+          students: "FPE2022-2",
+          time: "19:00 - 19:50"
         },
         {
-          subject: "Máquinas e Acionamentos - 1575",
-          size: 1,
-          teacher: "Wylliam Salviano Gongora",
-          classroom: "Laboratório de Máquinas e Acionamentos Elétricos B4",
-          students: "EIN2020",
-          time: "11:05 - 11:55"
+          subject: "Cultura e Identidade Brasileira - 2253",
+          size: 2,
+          teacher: "Celina de Oliveira Barbosa Gomes",
+          classroom: "",
+          students: "FPE2022-2",
+          time: "21:00 - 21:50"
         }
       ]
     },
@@ -116,7 +133,7 @@ const data = {
   ]
 }
 
-# Laboratório de Máquinas e Acionamentos Elétricos B4
+# FPE2022-2
 
 <div>
     {
