--- a/docs/turma/iiw2021.mdx
+++ b/docs/turma/iiw2021.mdx
@@ -9,7 +9,7 @@ const data = {
           subject: "Laboratório de Banco de Dados - 1238",
           size: 2,
           teacher: "Douglas Barbosa Sousa",
-          classroom: "Laboratório de Informatica B",
+          classroom: "Laboratório de Informatica A",
           students: "IIW2021",
           time: "09:25 - 10:15"
         },
@@ -24,7 +24,7 @@ const data = {
         {
           subject: "Arte I - 1235",
           size: 1,
-          teacher: "Josiane Paula Maltauro",
+          teacher: "Renata Carolina Pereira",
           classroom: "Sala 12-2",
           students: "IIW2021",
           time: "13:10 - 14:00"
@@ -46,7 +46,7 @@ const data = {
           subject: "Projeto Integrador II - 1239",
           size: 2,
           teacher: "Alexandre Rodrigues Monge",
-          classroom: "Laboratório de Informatica B",
+          classroom: "Laboratório de Informatica A",
           students: "IIW2021",
           time: "13:10 - 14:00"
         },
@@ -56,7 +56,7 @@ const data = {
           teacher: "Michelli Cristina Galli",
           classroom: "Sala 12-2",
           students: "IIW2021",
-          time: "09:25 - 10:15"
+          time: "11:05 - 11:55"
         },
         {
           subject: "Língua Portuguesa e Literatura II - 1226",
@@ -64,7 +64,7 @@ const data = {
           teacher: "Michelli Cristina Galli",
           classroom: "Sala 12-2",
           students: "IIW2021",
-          time: "10:15 - 11:05"
+          time: "07:30 - 08:20"
         },
         {
           subject: "Física II - 1229",
@@ -76,19 +76,11 @@ const data = {
         },
         {
           subject: "Matemática II - 1231",
-          size: 1,
+          size: 2,
           teacher: "Sérgio Augusto Dias Castro",
           classroom: "Sala 12-2",
           students: "IIW2021",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Matemática II - 1231",
-          size: 1,
-          teacher: "Sérgio Augusto Dias Castro",
-          classroom: "Sala 12-2",
-          students: "IIW2021",
-          time: "08:20 - 09:10"
+          time: "09:25 - 10:15"
         }
       ]
     },
@@ -96,9 +88,17 @@ const data = {
       title: "Quarta-Feira",
       timetable: [
         {
+          subject: "Biologia II - 1228",
+          size: 2,
+          teacher: "Gabriele Antico Freiria",
+          classroom: "Sala 12-2",
+          students: "IIW2021",
+          time: "10:15 - 11:05"
+        },
+        {
           subject: "Arte I - 1235",
           size: 1,
-          teacher: "Josiane Paula Maltauro",
+          teacher: "Renata Carolina Pereira",
           classroom: "Sala 12-2",
           students: "IIW2021",
           time: "09:25 - 10:15"
@@ -110,14 +110,6 @@ const data = {
           classroom: "Educação Física / Sala 4 B2",
           students: "IIW2021",
           time: "07:30 - 08:20"
-        },
-        {
-          subject: "Desenvolvimento WEB Orientado a Objetos - 1237",
-          size: 2,
-          teacher: "Luis Henrique Manosso Von Mecheln",
-          classroom: "Laboratório de Computação Aplicada",
-          students: "IIW2021",
-          time: "10:15 - 11:05"
         }
       ]
     },
@@ -170,10 +162,10 @@ const data = {
           time: "09:25 - 10:15"
         },
         {
-          subject: "Biologia II - 1228",
+          subject: "Desenvolvimento WEB Orientado a Objetos - 1237",
           size: 2,
-          teacher: "Gabriele Antico Freiria",
-          classroom: "Sala 12-2",
+          teacher: "Luis Henrique Manosso Von Mecheln",
+          classroom: "Laboratório de Computação Aplicada",
           students: "IIW2021",
           time: "07:30 - 08:20"
         },
