--- a/docs/turma/iiw2022a.mdx
+++ b/docs/turma/iiw2022a.mdx
@@ -8,7 +8,7 @@ const data = {
         {
           subject: "Fundamentos de informática - 1076",
           size: 2,
-          teacher: "Douglas Barbosa Sousa",
+          teacher: "Caroline Domingues Porto do Nascimento Barbieri",
           classroom: "Laboratório de Informatica A",
           students: "IIW2022A",
           time: "07:30 - 08:20"
@@ -69,7 +69,7 @@ const data = {
         {
           subject: "Linguagens de apresentação e estruturação de conteúdos - 1074",
           size: 2,
-          teacher: "Rafael Gil Ferques+Novo(a) professor(a) Informática",
+          teacher: "Rafael Gil Ferques",
           classroom: "Laboratório de Informatica A",
           students: "IIW2022A",
           time: "07:30 - 08:20"
@@ -93,15 +93,15 @@ const data = {
           teacher: "Polyanna Guimarães e Miranda",
           classroom: "Laboratório de Física",
           students: "IIW2022A",
-          time: "09:25 - 10:15"
+          time: "07:30 - 08:20"
         },
         {
           subject: "Linguagens de apresentação e estruturação de conteúdos - 1074",
           size: 2,
-          teacher: "Rafael Gil Ferques+Novo(a) professor(a) Informática",
+          teacher: "Rafael Gil Ferques",
           classroom: "Laboratório de Informatica A",
           students: "IIW2022A",
-          time: "07:30 - 08:20"
+          time: "09:25 - 10:15"
         }
       ]
     },
