--- a/docs/turma/tads2020.mdx
+++ b/docs/turma/tads2020.mdx
@@ -9,7 +9,7 @@ const data = {
           subject: "Programação para Sistemas Embarcados - 22",
           size: 2,
           teacher: "Marcos Antonio Guido",
-          classroom: "Laboratório de Informatica B",
+          classroom: "Laboratório de Informatica A",
           students: "TADS2020",
           time: "19:00 - 19:50"
         },
@@ -17,7 +17,7 @@ const data = {
           subject: "Segurança em Sistemas e Redes - 23",
           size: 1,
           teacher: "Marcos Antonio Guido",
-          classroom: "Laboratório de Informatica B",
+          classroom: "Laboratório de Informatica A",
           students: "TADS2020",
           time: "21:50 - 22:40"
         },
@@ -66,7 +66,7 @@ const data = {
         {
           subject: "Engenharia de Software - 20",
           size: 2,
-          teacher: "Rafael Gil Ferques+Novo(a) professor(a) Informática",
+          teacher: "Rafael Gil Ferques",
           classroom: "Laboratório de Informatica A",
           students: "TADS2020",
           time: "21:00 - 21:50"
@@ -80,7 +80,7 @@ const data = {
           subject: "Programação Orientada a Objetos - 21",
           size: 2,
           teacher: "Humberto Fioravante Ferro",
-          classroom: "Laboratório de Informatica B",
+          classroom: "Laboratório de Informatica A",
           students: "TADS2020",
           time: "19:00 - 19:50"
         },
@@ -88,7 +88,7 @@ const data = {
           subject: "Programação Orientada a Objetos - 21",
           size: 2,
           teacher: "Humberto Fioravante Ferro",
-          classroom: "Laboratório de Informatica B",
+          classroom: "Laboratório de Informatica A",
           students: "TADS2020",
           time: "21:00 - 21:50"
         }
@@ -109,7 +109,7 @@ const data = {
           subject: "Tópicos Especiais em Tecnologia da Informação - 25",
           size: 2,
           teacher: "Marcos Antonio Guido",
-          classroom: "Laboratório de Informatica B",
+          classroom: "Laboratório de Informatica A",
           students: "TADS2020",
           time: "19:00 - 19:50"
         }
